feat: Update itinerary details and flights for Aug 1-16, add flight info card to index page

--- a/day10.html
+++ b/day10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 10 · 阿克雷里北部之都｜冰島自駕 2026</title>
+    <title>Day 10 · 西北公路與冰島馬｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,23 +19,23 @@
     <div class="top">
         <a class="back" href="day9.html">←</a>
         <div>
-            <div class="top-title">Day 10 · 阿克雷里北部之都</div>
-            <div class="top-sub">8月10日（週日）</div>
+            <div class="top-title">Day 10 · 西北公路與冰島馬</div>
+            <div class="top-sub">8月10日（週一）</div>
         </div>
     </div>
 
     <!-- 日橫幅 -->
-    <div class="banner" style="background:linear-gradient(135deg, #f97316, #f97316dd)">
+    <div class="banner" style="background:linear-gradient(135deg, #64748b, #64748bdd)">
         <div class="banner-num">10</div>
         <div class="banner-info">
-            <div class="theme">阿克雷里北部之都 🏘️</div>
-            <div class="meta">8月10日（週日）・⛪ 教堂</div>
+            <div class="theme">西北公路與冰島馬 🐴</div>
+            <div class="meta">8月10日（週一）・🍦 冰淇淋</div>
         </div>
     </div>
 
     <!-- 行程時間軸 -->
     <div class="sec-head">
-        <div class="dot" style="background:#f97316"></div>
+        <div class="dot" style="background:#64748b"></div>
         <h2><i data-lucide="map-pin"></i> 今日行程</h2>
     </div>
     <div class="timeline">
@@ -48,11 +48,11 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 09:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%98%BF%E5%85%8B%E9%9B%B7%E9%87%8C%E6%95%99%E5%A0%82%20Akureyrarkirkja%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%98%BF%E5%85%8B%E9%9B%B7%E9%87%8C%E5%B8%82%E5%8D%80%E6%BC%AB%E6%AD%A5%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">阿克雷里教堂 Akureyrarkirkja</div>
-                <div class="tl-desc">矗立在市中心山坡上的地標教堂，寬闊的階梯提供俯瞰峽灣的絕佳視角。</div>
-                <div class="tl-tags"><span class="tl-tag">⛪ 教堂</span><span class="tl-tag">📸 全景</span></div>
+                <div class="tl-title">阿克雷里市區漫步</div>
+                <div class="tl-desc">逛逛植物園，品嚐冰島人氣第一名的 Brynja 冰淇淋。</div>
+                <div class="tl-tags"><span class="tl-tag">🍦 冰淇淋</span><span class="tl-tag">🌸 植物園</span></div>
             </div>
         </div>
 
@@ -63,12 +63,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 10:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%98%BF%E5%85%8B%E9%9B%B7%E9%87%8C%E6%A4%8D%E7%89%A9%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚗 12:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%95%9F%E7%A8%8B%E8%A5%BF%E8%A1%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">阿克雷里植物園</div>
-                <div class="tl-desc">世界最北的植物園之一（免費入場）。夏季繽紛花卉盛開，非常值得一逛。</div>
-                <div class="tl-tags"><span class="tl-tag">🌸 植物園</span><span class="tl-tag">🆓 免費</span></div>
+                <div class="tl-title">啟程西行</div>
+                <div class="tl-desc">沿著一號公路往西北部移動。</div>
+                <div class="tl-tags"><span class="tl-tag">🚗 自駕</span></div>
             </div>
         </div>
 
@@ -79,28 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 12:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%B8%82%E5%8D%80%E6%BC%AB%E6%AD%A5%E8%88%87%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">📸 14:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Skagafj%C3%B6r%C3%B0ur%20%E5%86%B0%E5%B3%B6%E9%A6%AC%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">市區漫步與午餐</div>
-                <div class="tl-desc">逛 Hafnarstræti 主街的特色商店與咖啡廳。推薦 Brynja 冰淇淋（冰島人最愛的冰淇淋店）。</div>
-                <div class="tl-tags"><span class="tl-tag">🍦 冰淇淋</span><span class="tl-tag">🛍️ 購物</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚗 14:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Dalv%C3%ADk%20%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">Dalvík 小鎮</div>
-                <div class="tl-desc">北上 20 分鐘到 Dalvík，可漫步海邊或參觀民俗博物館。</div>
-                <div class="tl-tags"><span class="tl-tag">🏘️ 漁村</span></div>
+                <div class="tl-title">Skagafjörður 冰島馬</div>
+                <div class="tl-desc">沿著馬谷前進，途中可欣賞並拍攝路邊獨特可愛的冰島馬。</div>
+                <div class="tl-tags"><span class="tl-tag">🐴 冰島馬</span></div>
             </div>
         </div>
 
@@ -111,12 +95,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 16:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%87%AA%E7%94%B1%E6%B4%BB%E5%8B%95%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🏨 17:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%85%A5%E4%BD%8F%E8%A5%BF%E5%8C%97%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">自由活動</div>
-                <div class="tl-desc">回到阿克雷里市區自由活動。推薦到 Sjallinn 酒吧聽現場音樂，或在峽灣邊散步。</div>
-                <div class="tl-tags"><span class="tl-tag">🎵 音樂</span><span class="tl-tag">🚶 散步</span></div>
+                <div class="tl-title">入住西北小鎮</div>
+                <div class="tl-desc">在 Blönduós 或斯奈山前緣的城鎮休息。</div>
+                <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span></div>
             </div>
         </div>
     </div>
@@ -129,8 +113,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">阿克雷里住宿</div>
-            <div class="desc">📍 同上一晚<br>🛏️ 第 10 晚</div>
+            <div class="name">西北部城鎮住宿</div>
+            <div class="desc">📍 Blönduós 或周邊<br>🛏️ 第 10 晚</div>
         </div>
     </div>
 
@@ -148,22 +132,18 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>阿克雷里紅燈是愛心形狀，很可愛！記得拍照。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Brynja 冰淇淋是冰島人心中第一名的冰淇淋。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>阿克雷里有 Bónus 超市可以大量補給。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>冰島馬非常友善，但為了馬匹健康，請絕對不要餵食人類的食物。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day11.html">Day 11 · 西北冰島 →</a></div>
+    <div class="next-day"><a href="day11.html">Day 11 · 斯奈山半島 →</a></div>
 
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([65.68, -18.09], 10);
+            var map = L.map('map').setView([65.4, -19.5], 7);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Akureyrarkirkja","lat":65.682,"lng":-18.089,"c":"#f97316"},{"name":"植物園","lat":65.672,"lng":-18.1,"c":"#10b981"},{"name":"Dalvík","lat":65.967,"lng":-18.528,"c":"#2563eb"}];
+            var spots = [{"name":"Akureyri","lat":65.684,"lng":-18.088,"c":"#f59e0b"},{"name":"Blönduós","lat":65.66,"lng":-20.29,"c":"#64748b"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
