--- a/day11.html
+++ b/day11.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 11 · 西北冰島公路｜冰島自駕 2026</title>
+    <title>Day 11 · 斯奈山半島全貌｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,23 +19,23 @@
     <div class="top">
         <a class="back" href="day10.html">←</a>
         <div>
-            <div class="top-title">Day 11 · 西北冰島公路</div>
-            <div class="top-sub">8月11日（週一）</div>
+            <div class="top-title">Day 11 · 斯奈山半島全貌</div>
+            <div class="top-sub">8月11日（週二）</div>
         </div>
     </div>
 
     <!-- 日橫幅 -->
-    <div class="banner" style="background:linear-gradient(135deg, #64748b, #64748bdd)">
+    <div class="banner" style="background:linear-gradient(135deg, #8b5cf6, #8b5cf6dd)">
         <div class="banner-num">11</div>
         <div class="banner-info">
-            <div class="theme">西北冰島公路 🛤️</div>
-            <div class="meta">8月11日（週一）・🚗 公路之旅</div>
+            <div class="theme">斯奈山半島全貌 ⛰️</div>
+            <div class="meta">8月11日（週二）・🚗 自駕</div>
         </div>
     </div>
 
     <!-- 行程時間軸 -->
     <div class="sec-head">
-        <div class="dot" style="background:#64748b"></div>
+        <div class="dot" style="background:#8b5cf6"></div>
         <h2><i data-lucide="map-pin"></i> 今日行程</h2>
     </div>
     <div class="timeline">
@@ -48,11 +48,11 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 08:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%BA%E7%99%BC%E8%A5%BF%E8%A1%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E6%96%AF%E5%A5%88%E5%B1%B1%E5%8D%8A%E5%B3%B6%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">出發西行</div>
-                <div class="tl-desc">離開阿克雷里，沿一號公路前往西部。今天是較長的駕駛日。</div>
-                <div class="tl-tags"><span class="tl-tag">🚗 公路之旅</span></div>
+                <div class="tl-title">前往斯奈山半島</div>
+                <div class="tl-desc">有「冰島縮影」之稱的半島。</div>
+                <div class="tl-tags"><span class="tl-tag">🚗 自駕</span></div>
             </div>
         </div>
 
@@ -63,12 +63,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 10:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Skagafj%C3%B6r%C3%B0ur%20%E9%A6%AC%E8%B0%B7%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">📸 10:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%95%99%E6%9C%83%E5%B1%B1%20Kirkjufell%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Skagafjörður 馬谷</div>
-                <div class="tl-desc">冰島馬的故鄉！路邊可以看到大量矮壯可愛的冰島馬。可停下與馬群互動拍照（不要餵食）。</div>
-                <div class="tl-tags"><span class="tl-tag">🐴 冰島馬</span><span class="tl-tag">📸 互動</span></div>
+                <div class="tl-title">教會山 Kirkjufell</div>
+                <div class="tl-desc">冰島最容易被辨識的草帽山，欣賞完美的圓錐形山體與前方的瀑布。</div>
+                <div class="tl-tags"><span class="tl-tag">⛰️ 網紅草帽山</span><span class="tl-tag">🎬 權力遊戲</span></div>
             </div>
         </div>
 
@@ -79,12 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 12:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Bl%C3%B6ndu%C3%B3s%20%E5%B0%8F%E9%8E%AE%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚶 13:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Dj%C3%BApal%C3%B3nssandur%20%E9%BB%91%E7%8F%8D%E7%8F%A0%E6%B2%99%E7%81%98%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Blönduós 小鎮午餐</div>
-                <div class="tl-desc">西北部的小鎮，在此補給用餐與加油。</div>
-                <div class="tl-tags"><span class="tl-tag">🍽️ 午餐</span><span class="tl-tag">⛽ 加油</span></div>
+                <div class="tl-title">Djúpalónssandur 黑珍珠沙灘</div>
+                <div class="tl-desc">海灘散落著各種形狀的黑鵝卵石，還可以測試古代漁夫用來搬的「力量石」。</div>
+                <div class="tl-tags"><span class="tl-tag">🏖️ 海灘</span><span class="tl-tag">💪 力量石</span></div>
             </div>
         </div>
 
@@ -95,12 +95,28 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 14:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E5%B8%83%E5%80%AB%E8%BF%AA%E6%AD%90%E6%96%AF%E8%87%B3%E6%96%AF%E5%A5%88%E5%B1%B1%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚶 15:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Arnarstapi%20%E6%87%B8%E5%B4%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">前往布倫迪歐斯至斯奈山</div>
-                <div class="tl-desc">繼續西行，沿途經過寧靜的冰島鄉村風光。</div>
-                <div class="tl-tags"><span class="tl-tag">🛤️ 鄉村公路</span></div>
+                <div class="tl-title">Arnarstapi 懸崖</div>
+                <div class="tl-desc">在這裡觀賞壯麗的巨型海蝕洞與鳥類保護區。</div>
+                <div class="tl-tags"><span class="tl-tag">🦅 觀鳥</span><span class="tl-tag">🌊 懸崖步道</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 16:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
+                <div class="tl-title">返回雷克雅維克</div>
+                <div class="tl-desc">結束半島環遊，開車返回首都。</div>
+                <div class="tl-tags"><span class="tl-tag">🚗 首都圈</span></div>
             </div>
         </div>
 
@@ -111,12 +127,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🏨 17:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%20Stykkish%C3%B3lmur%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🏨 19:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%85%A5%E4%BD%8F%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">抵達 Stykkishólmur</div>
-                <div class="tl-desc">入住斯奈山半島北岸的小鎮，風景優美的漁港小鎮。</div>
-                <div class="tl-tags"><span class="tl-tag">🏨 住宿</span><span class="tl-tag">⚓ 漁港</span></div>
+                <div class="tl-title">入住雷克雅維克</div>
+                <div class="tl-desc">抵達並入住雷克雅維克的旅館。</div>
+                <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span></div>
             </div>
         </div>
     </div>
@@ -129,8 +145,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">Stykkishólmur 住宿</div>
-            <div class="desc">📍 斯奈山半島北岸<br>🛏️ 第 11 晚（共住 2 晚）<br>💡 白日夢冒險王拍攝地</div>
+            <div class="name">雷克雅維克住宿</div>
+            <div class="desc">📍 首都區<br>🛏️ 第 11 晚</div>
         </div>
     </div>
 
@@ -148,22 +164,18 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>今天車程較長（約 4-5 小時），適時休息。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>冰島馬可以友善互動但不要餵食人類食物。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Stykkishólmur 是電影《白日夢冒險王》的拍攝場景之一。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>斯奈山半島天氣非常多變，颳風下雨時請務必開車小心。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day12.html">Day 12 · 斯奈山東段 →</a></div>
+    <div class="next-day"><a href="day12.html">Day 12 · 首都巡禮 →</a></div>
 
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([65.2, -19.5], 7);
+            var map = L.map('map').setView([64.8, -23.5], 8);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Skagafjörður","lat":65.74,"lng":-19.2,"c":"#f59e0b"},{"name":"Blönduós","lat":65.66,"lng":-20.29,"c":"#64748b"},{"name":"Stykkishólmur","lat":65.076,"lng":-22.73,"c":"#2563eb"}];
+            var spots = [{"name":"Kirkjufell","lat":64.943,"lng":-23.307,"c":"#8b5cf6"},{"name":"Arnarstapi","lat":64.772,"lng":-23.625,"c":"#2563eb"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
