--- a/day12.html
+++ b/day12.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 12 · 斯奈山半島東段｜冰島自駕 2026</title>
+    <title>Day 12 · 雷克雅維克市區｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,23 +19,23 @@
     <div class="top">
         <a class="back" href="day11.html">←</a>
         <div>
-            <div class="top-title">Day 12 · 斯奈山半島東段</div>
-            <div class="top-sub">8月12日（週二）</div>
+            <div class="top-title">Day 12 · 雷克雅維克市區</div>
+            <div class="top-sub">8月12日（週三）</div>
         </div>
     </div>
 
     <!-- 日橫幅 -->
-    <div class="banner" style="background:linear-gradient(135deg, #ec4899, #ec4899dd)">
+    <div class="banner" style="background:linear-gradient(135deg, #2563eb, #2563ebdd)">
         <div class="banner-num">12</div>
         <div class="banner-info">
-            <div class="theme">斯奈山半島東段 🌄</div>
-            <div class="meta">8月12日（週二）・⛰️ 教會山</div>
+            <div class="theme">雷克雅維克市區 🎨</div>
+            <div class="meta">8月12日（週三）・⛪ 地標</div>
         </div>
     </div>
 
     <!-- 行程時間軸 -->
     <div class="sec-head">
-        <div class="dot" style="background:#ec4899"></div>
+        <div class="dot" style="background:#2563eb"></div>
         <h2><i data-lucide="map-pin"></i> 今日行程</h2>
     </div>
     <div class="timeline">
@@ -47,12 +47,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%95%99%E6%9C%83%E5%B1%B1%20Kirkjufell%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚶 09:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%93%88%E7%88%BE%E6%A0%BC%E6%9E%97%E5%A7%86%E6%95%99%E5%A0%82%20Hallgr%C3%ADmskirkja%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">教會山 Kirkjufell</div>
-                <div class="tl-desc">冰島被拍攝最多的山！完美的箭頭形狀配上旁邊的 Kirkjufellsfoss 瀑布。權力遊戲的拍攝地。</div>
-                <div class="tl-tags"><span class="tl-tag">⛰️ 教會山</span><span class="tl-tag">🎬 權力遊戲</span></div>
+                <div class="tl-title">哈爾格林姆教堂 Hallgrímskirkja</div>
+                <div class="tl-desc">雷克雅維克地標，外型如玄武岩柱。可搭電梯到塔頂俯瞰。</div>
+                <div class="tl-tags"><span class="tl-tag">⛪ 地標</span><span class="tl-tag">🏙️ 城市鳥瞰</span></div>
             </div>
         </div>
 
@@ -64,11 +64,11 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 10:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Grundarfj%C3%B6r%C3%B0ur%20%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%BD%A9%E8%99%B9%E8%A1%97%20Sk%C3%B3lav%C3%B6r%C3%B0ust%C3%ADgur%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Grundarfjörður 小鎮</div>
-                <div class="tl-desc">教會山腳下的寧靜漁村。可在海邊咖啡廳歇腳。</div>
-                <div class="tl-tags"><span class="tl-tag">🏘️ 漁村</span><span class="tl-tag">☕ 咖啡</span></div>
+                <div class="tl-title">彩虹街 Skólavörðustígur</div>
+                <div class="tl-desc">從教堂前方的彩虹步道開始探索各種小巧精美的設計店與咖啡館。</div>
+                <div class="tl-tags"><span class="tl-tag">🌈 拍照</span><span class="tl-tag">☕ 咖啡</span></div>
             </div>
         </div>
 
@@ -79,12 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 12:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%C3%93lafsv%C3%ADk%20%E8%88%87%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚶 13:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Harpa%20%E9%9F%B3%E6%A8%82%E5%BB%B3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Ólafsvík 與午餐</div>
-                <div class="tl-desc">斯奈山北岸的另一個迷人漁村，有不錯的餐廳。</div>
-                <div class="tl-tags"><span class="tl-tag">🍽️ 午餐</span></div>
+                <div class="tl-title">Harpa 音樂廳</div>
+                <div class="tl-desc">奪目的蜂巢玻璃建築，在陽光下閃爍動人光芒。</div>
+                <div class="tl-tags"><span class="tl-tag">🎵 音樂廳</span><span class="tl-tag">📐 建築</span></div>
             </div>
         </div>
 
@@ -95,12 +95,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 14:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Sv%C3%B6%C3%B0ufoss%20%E7%80%91%E5%B8%83%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚶 15:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%A4%AA%E9%99%BD%E8%88%AA%E6%B5%B7%E8%80%85%20Sun%20Voyager%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Svöðufoss 瀑布</div>
-                <div class="tl-desc">較少人知道的美麗瀑布，背景是斯奈菲爾冰川。步行約 20 分鐘。</div>
-                <div class="tl-tags"><span class="tl-tag">🌊 瀑布</span><span class="tl-tag">🏔️ 冰川</span></div>
+                <div class="tl-title">太陽航海者 Sun Voyager</div>
+                <div class="tl-desc">海濱的海盜船骨架雕塑，面朝著大海與雪山。</div>
+                <div class="tl-tags"><span class="tl-tag">⛵ 地標雕塑</span></div>
             </div>
         </div>
 
@@ -111,12 +111,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 16:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Stykkish%C3%B3lmur%20%E7%87%88%E5%A1%94%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🍽️ 18:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%B2%BE%E7%B7%BB%E5%86%B0%E5%B3%B6%E6%99%9A%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Stykkishólmur 燈塔</div>
-                <div class="tl-desc">回到住宿小鎮，爬上 Súgandisey 島觀賞橘色燈塔與峽灣全景。日落時分特別美。</div>
-                <div class="tl-tags"><span class="tl-tag">🗼 燈塔</span><span class="tl-tag">🌅 日落</span></div>
+                <div class="tl-title">精緻冰島晚餐</div>
+                <div class="tl-desc">挑選市區評價優良的餐廳享用傳統魚湯或羊肉。</div>
+                <div class="tl-tags"><span class="tl-tag">🍽️ 晚餐</span></div>
             </div>
         </div>
     </div>
@@ -129,8 +129,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">Stykkishólmur 住宿</div>
-            <div class="desc">📍 同上一晚<br>🛏️ 第 12 晚</div>
+            <div class="name">雷克雅維克住宿</div>
+            <div class="desc">📍 同上<br>🛏️ 第 12 晚</div>
         </div>
     </div>
 
@@ -148,22 +148,18 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>教會山最佳拍照時間是清晨或黃昏。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>斯奈山半島天氣多變更甚，隨時準備防雨。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>如果想海上觀鳥，Stykkishólmur 有出海行程。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>首都停車須付費，且分為不同區域，推薦下載 Parka App 付費最方便。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day13.html">Day 13 · 斯奈山西段 →</a></div>
+    <div class="next-day"><a href="day13.html">Day 13 · 藍湖溫泉 →</a></div>
 
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([64.9, -23.5], 9);
+            var map = L.map('map').setView([64.14, -21.93], 13);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Kirkjufell","lat":64.943,"lng":-23.307,"c":"#ec4899"},{"name":"Grundarfjörður","lat":64.926,"lng":-23.261,"c":"#2563eb"},{"name":"Stykkishólmur","lat":65.076,"lng":-22.73,"c":"#f59e0b"}];
+            var spots = [{"name":"大教堂","lat":64.142,"lng":-21.927,"c":"#2563eb"},{"name":"Harpa","lat":64.15,"lng":-21.933,"c":"#f59e0b"},{"name":"Sun Voyager","lat":64.148,"lng":-21.922,"c":"#10b981"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
