--- a/day14.html
+++ b/day14.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 14 · 雷克雅維克市區｜冰島自駕 2026</title>
+    <title>Day 14 · 緩衝與自由安排｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,23 +19,23 @@
     <div class="top">
         <a class="back" href="day13.html">←</a>
         <div>
-            <div class="top-title">Day 14 · 雷克雅維克市區</div>
-            <div class="top-sub">8月14日（週四）</div>
+            <div class="top-title">Day 14 · 緩衝與自由安排</div>
+            <div class="top-sub">8月14日（週五）</div>
         </div>
     </div>
 
     <!-- 日橫幅 -->
-    <div class="banner" style="background:linear-gradient(135deg, #2563eb, #2563ebdd)">
+    <div class="banner" style="background:linear-gradient(135deg, #ec4899, #ec4899dd)">
         <div class="banner-num">14</div>
         <div class="banner-info">
-            <div class="theme">雷克雅維克市區 🎨</div>
-            <div class="meta">8月14日（週四）・⛪ 地標教堂</div>
+            <div class="theme">緩衝與自由安排 ☕</div>
+            <div class="meta">8月14日（週五）・🦞 龍蝦湯</div>
         </div>
     </div>
 
     <!-- 行程時間軸 -->
     <div class="sec-head">
-        <div class="dot" style="background:#2563eb"></div>
+        <div class="dot" style="background:#ec4899"></div>
         <h2><i data-lucide="map-pin"></i> 今日行程</h2>
     </div>
     <div class="timeline">
@@ -47,12 +47,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 09:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%93%88%E7%88%BE%E6%A0%BC%E6%9E%97%E5%A7%86%E6%95%99%E5%A0%82%20Hallgr%C3%ADmskirkja%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">☕ 10:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%88%8A%E6%B8%AF%E5%8D%80%20(Old%20Harbour)%20%E6%95%A3%E6%AD%A5%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">哈爾格林姆教堂 Hallgrímskirkja</div>
-                <div class="tl-desc">雷克雅維克地標！搭電梯到 73 公尺高的塔頂，360 度俯瞰整座城市與遠方的山脈。</div>
-                <div class="tl-tags"><span class="tl-tag">⛪ 地標教堂</span><span class="tl-tag">🏙️ 全景</span></div>
+                <div class="tl-title">舊港區 (Old Harbour) 散步</div>
+                <div class="tl-desc">在港口邊悠閒漫步，這裡有老字號的海鮮湯店。</div>
+                <div class="tl-tags"><span class="tl-tag">🦞 龍蝦湯</span></div>
             </div>
         </div>
 
@@ -63,76 +63,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 10:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%BD%A9%E8%99%B9%E8%A1%97%20Sk%C3%B3lav%C3%B6r%C3%B0ust%C3%ADgur%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🏛️ 12:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%8F%83%E8%A7%80%E5%8D%9A%E7%89%A9%E9%A4%A8%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">彩虹街 Skólavörðustígur</div>
-                <div class="tl-desc">從教堂延伸而下的彩虹步道，兩旁是特色商店與藝廊。</div>
-                <div class="tl-tags"><span class="tl-tag">🌈 彩虹街</span><span class="tl-tag">🛍️ 購物</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚶 11:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%93%88%E5%B8%95%E9%9F%B3%E6%A8%82%E5%BB%B3%20Harpa%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">哈帕音樂廳 Harpa</div>
-                <div class="tl-desc">海港邊的建築傑作，幾何玻璃幕牆隨光影變化。內部免費參觀。</div>
-                <div class="tl-tags"><span class="tl-tag">🎵 音樂廳</span><span class="tl-tag">📐 建築</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🍽️ 12:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Old%20Harbour%20%E6%B8%AF%E5%8F%A3%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">Old Harbour 港口午餐</div>
-                <div class="tl-desc">在舊港口享用海鮮。推薦 Sea Baron 的龍蝦湯與鯨魚串。</div>
-                <div class="tl-tags"><span class="tl-tag">🍽️ 海鮮</span><span class="tl-tag">🦞 龍蝦湯</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚶 14:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Sun%20Voyager%20%E9%9B%95%E5%A1%91%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">Sun Voyager 雕塑</div>
-                <div class="tl-desc">海邊的維京船骨架不鏽鋼雕塑，是城市最知名的拍照點。背景是 Esja 山。</div>
-                <div class="tl-tags"><span class="tl-tag">⛵ 太陽航行者</span><span class="tl-tag">📸 地標</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚶 15:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%9C%8B%E5%AE%B6%E5%8D%9A%E7%89%A9%E9%A4%A8%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">國家博物館</div>
-                <div class="tl-desc">了解冰島從維京定居到現代的歷史。互動展覽非常精彩。</div>
-                <div class="tl-tags"><span class="tl-tag">🏛️ 博物館</span><span class="tl-tag">📖 歷史</span></div>
+                <div class="tl-title">參觀博物館</div>
+                <div class="tl-desc">可選擇前往 冰島國家博物館、極光中心 或 熱門的陰莖博物館參觀。</div>
+                <div class="tl-tags"><span class="tl-tag">🏛️ 博物館</span></div>
             </div>
         </div>
 
@@ -143,12 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🍽️ 19:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%91%8A%E5%88%A5%E6%99%9A%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛍️ 15:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%89%93%E5%8C%85%E8%A1%8C%E6%9D%8E%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">告別晚餐</div>
-                <div class="tl-desc">在 Grillið 或 Dill（冰島唯一的米其林星級餐廳）享用精緻晚餐。</div>
-                <div class="tl-tags"><span class="tl-tag">🌟 米其林</span><span class="tl-tag">🍽️ 晚餐</span></div>
+                <div class="tl-title">打包行李</div>
+                <div class="tl-desc">享受在冰島最後的悠閒時光，整理準備明日的班機。</div>
+                <div class="tl-tags"><span class="tl-tag">🧳 打包</span></div>
             </div>
         </div>
     </div>
@@ -161,8 +97,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">雷克雅維克市區住宿</div>
-            <div class="desc">📍 同上一晚<br>🛏️ 第 14 晚</div>
+            <div class="name">雷克雅維克住宿</div>
+            <div class="desc">📍 最後一晚<br>🛏️ 第 14 晚</div>
         </div>
     </div>
 
@@ -180,22 +116,18 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Hallgrímskirkja 塔頂門票約 1000 ISK。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Dill 餐廳需提前數週預約。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Laugavegur 有很多獨立設計師商店，適合買伴手禮。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>市區內有許多壁畫與特色塗鴉，可穿插進行一趟街頭藝術巡禮。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day15.html">Day 15 · 藍湖溫泉 →</a></div>
+    <div class="next-day"><a href="day15.html">Day 15 · 告別冰島 →</a></div>
 
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([64.147, -21.94], 13);
+            var map = L.map('map').setView([64.15, -21.94], 13);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Hallgrímskirkja","lat":64.142,"lng":-21.927,"c":"#2563eb"},{"name":"Harpa","lat":64.15,"lng":-21.933,"c":"#f59e0b"},{"name":"Sun Voyager","lat":64.148,"lng":-21.922,"c":"#10b981"}];
+            var spots = [];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
