--- a/day15.html
+++ b/day15.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 15 · 藍湖溫泉與紀念品｜冰島自駕 2026</title>
+    <title>Day 15 · 告別：啟程返台｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,23 +19,23 @@
     <div class="top">
         <a class="back" href="day14.html">←</a>
         <div>
-            <div class="top-title">Day 15 · 藍湖溫泉與紀念品</div>
-            <div class="top-sub">8月15日（週五）</div>
+            <div class="top-title">Day 15 · 告別：啟程返台</div>
+            <div class="top-sub">8月15日（週六）</div>
         </div>
     </div>
 
     <!-- 日橫幅 -->
-    <div class="banner" style="background:linear-gradient(135deg, #0ea5e9, #0ea5e9dd)">
+    <div class="banner" style="background:linear-gradient(135deg, #ef4444, #ef4444dd)">
         <div class="banner-num">15</div>
         <div class="banner-info">
-            <div class="theme">藍湖溫泉與紀念品 💎</div>
-            <div class="meta">8月15日（週五）・🛍️ 紀念品</div>
+            <div class="theme">告別：啟程返台 🛫</div>
+            <div class="meta">8月15日（週六）・🏨 退房</div>
         </div>
     </div>
 
     <!-- 行程時間軸 -->
     <div class="sec-head">
-        <div class="dot" style="background:#0ea5e9"></div>
+        <div class="dot" style="background:#ef4444"></div>
         <h2><i data-lucide="map-pin"></i> 今日行程</h2>
     </div>
     <div class="timeline">
@@ -47,12 +47,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%9C%80%E5%BE%8C%E7%9A%84%E5%B8%82%E5%8D%80%E8%B3%BC%E7%89%A9%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🏨 08:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8F%90%E6%97%A9%E9%80%80%E6%88%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">最後的市區購物</div>
-                <div class="tl-desc">在 Laugavegur 購買最後的紀念品。推薦：冰島羊毛衣 Lopapeysa、熔岩鹽、Omnom 巧克力。</div>
-                <div class="tl-tags"><span class="tl-tag">🛍️ 紀念品</span><span class="tl-tag">🧶 羊毛衣</span></div>
+                <div class="tl-title">提早退房</div>
+                <div class="tl-desc">離開陪伴多日的住宿處，開車前往機場方向。</div>
+                <div class="tl-tags"><span class="tl-tag">🏨 退房</span></div>
             </div>
         </div>
 
@@ -63,12 +63,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 12:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E8%97%8D%E6%B9%96%20Blue%20Lagoon%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚗 09:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%B1%E5%A4%AB%E6%8B%89%E7%B6%AD%E5%85%8B%E9%82%84%E8%BB%8A%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">前往藍湖 Blue Lagoon</div>
-                <div class="tl-desc">冰島最著名的溫泉！乳藍色的地熱溫泉水，富含矽和礦物質。門票需提前預訂！</div>
-                <div class="tl-tags"><span class="tl-tag">💎 藍湖</span><span class="tl-tag">♨️ 溫泉</span></div>
+                <div class="tl-title">凱夫拉維克還車</div>
+                <div class="tl-desc">將車輛油箱加滿並完成還車手續，搭接駁車前往航廈。</div>
+                <div class="tl-tags"><span class="tl-tag">🚗 還車</span><span class="tl-tag">⛽ 加油</span></div>
             </div>
         </div>
 
@@ -79,12 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">♨️ 13:00 – 16:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%97%8D%E6%B9%96%E6%B3%A1%E6%BA%AB%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛂 11:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%A0%B1%E5%88%B0%E8%88%87%E6%89%8B%E7%BA%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">藍湖泡溫泉</div>
-                <div class="tl-desc">在 38-39°C 的溫泉中放鬆。可體驗矽泥面膜（含在門票中）。Premium 票含飲料與浴袍。</div>
-                <div class="tl-tags"><span class="tl-tag">♨️ 溫泉</span><span class="tl-tag">💆 矽泥面膜</span></div>
+                <div class="tl-title">報到與手續</div>
+                <div class="tl-desc">進行機場報到、退稅手續，隨後可在免稅店進行最後採購。</div>
+                <div class="tl-tags"><span class="tl-tag">💸 退稅</span><span class="tl-tag">🛍️ 免稅</span></div>
             </div>
         </div>
 
@@ -95,12 +95,28 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🍽️ 16:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%97%8D%E6%B9%96%20Lava%20%E9%A4%90%E5%BB%B3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛫 14:20</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%8F%AD%E6%A9%9F%20LH845%20%E8%B5%B7%E9%A3%9B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">藍湖 Lava 餐廳</div>
-                <div class="tl-desc">在藍湖旁的 Lava 餐廳享用精緻冰島料理，透過落地窗欣賞藍湖蒸氣風景。</div>
-                <div class="tl-tags"><span class="tl-tag">🍽️ 精緻料理</span></div>
+                <div class="tl-title">班機 LH845 起飛</div>
+                <div class="tl-desc">帶著滿滿回憶與照片，飛離冰島 KEF，前往法蘭克福 FRA。</div>
+                <div class="tl-tags"><span class="tl-tag">✈️ 再見冰島</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time-row">
+                    <div class="tl-time">🛬 19:50</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E6%B3%95%E8%98%AD%E5%85%8B%E7%A6%8F%E8%BD%89%E6%A9%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
+                <div class="tl-title">抵達法蘭克福轉機</div>
+                <div class="tl-desc">⚠️ 轉機時間僅 1 小時 50 分鐘，為避免安檢排隊，請下機後立刻尋找下個航班 LH796 的登機門。</div>
+                <div class="tl-tags"><span class="tl-tag">🇩🇪 法蘭克福</span><span class="tl-tag">🏃 快速轉機</span></div>
             </div>
         </div>
 
@@ -111,12 +127,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 18:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛫 21:40</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%90%AD%E7%8F%AD%E6%A9%9F%20LH796%20%E9%A3%9B%E5%BE%80%E9%A6%99%E6%B8%AF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">返回雷克雅維克</div>
-                <div class="tl-desc">從藍湖回到市區，約 50 分鐘車程。最後一晚的自由時光。</div>
-                <div class="tl-tags"><span class="tl-tag">🚗 返程</span></div>
+                <div class="tl-title">搭班機 LH796 飛往香港</div>
+                <div class="tl-desc">搭乘夜航班返回亞洲。</div>
+                <div class="tl-tags"><span class="tl-tag">✈️ 長途飛行</span></div>
             </div>
         </div>
     </div>
@@ -129,8 +145,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">雷克雅維克市區住宿</div>
-            <div class="desc">📍 同上一晚<br>🛏️ 第 15 晚（最後一晚）</div>
+            <div class="name">機上休息</div>
+            <div class="desc">✈️ 飛往香港<br>🛏️ 第 15 晚</div>
         </div>
     </div>
 
@@ -148,24 +164,18 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>藍湖門票非常搶手，建議出發前 2-3 週預訂。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>泡溫泉前先沖洗身體（冰島文化要求）。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>頭髮長的人建議抹護髮素再下水，避免被礦物水弄乾。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>整理行李，明天要離開了！</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>法蘭克福轉機時間較為緊湊，若前段班機延遲，請立刻通知地勤協助。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day16.html">Day 16 · 返程 →</a></div>
+    <div class="next-day"><a href="day16.html">Day 16 · 抵達台北 →</a></div>
 
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([63.88, -22.45], 10);
+            var map = L.map('map').setView([63.98, -22.6], 11);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Blue Lagoon","lat":63.88,"lng":-22.45,"c":"#0ea5e9"},{"name":"Laugavegur","lat":64.147,"lng":-21.933,"c":"#f59e0b"}];
+            var spots = [{"name":"KEF 機場","lat":63.985,"lng":-22.606,"c":"#ef4444"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
