--- a/day16.html
+++ b/day16.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 16 · 返程｜冰島自駕 2026</title>
+    <title>Day 16 · 抵達溫暖的家｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,23 +19,23 @@
     <div class="top">
         <a class="back" href="day15.html">←</a>
         <div>
-            <div class="top-title">Day 16 · 返程</div>
-            <div class="top-sub">8月16日（週六）</div>
+            <div class="top-title">Day 16 · 抵達溫暖的家</div>
+            <div class="top-sub">8月16日（週日）</div>
         </div>
     </div>
 
     <!-- 日橫幅 -->
-    <div class="banner" style="background:linear-gradient(135deg, #ef4444, #ef4444dd)">
+    <div class="banner" style="background:linear-gradient(135deg, #10b981, #10b981dd)">
         <div class="banner-num">16</div>
         <div class="banner-info">
-            <div class="theme">返程 🛫</div>
-            <div class="meta">8月16日（週六）・🏨 退房</div>
+            <div class="theme">抵達溫暖的家 🏡</div>
+            <div class="meta">8月16日（週日）・🇭🇰 香港轉機</div>
         </div>
     </div>
 
     <!-- 行程時間軸 -->
     <div class="sec-head">
-        <div class="dot" style="background:#ef4444"></div>
+        <div class="dot" style="background:#10b981"></div>
         <h2><i data-lucide="map-pin"></i> 今日行程</h2>
     </div>
     <div class="timeline">
@@ -47,12 +47,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🏨 08:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Check-out%20%E8%88%87%E6%9C%80%E5%BE%8C%E6%95%B4%E7%90%86%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛬 15:45</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E9%A6%99%E6%B8%AF%E8%BD%89%E6%A9%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Check-out 與最後整理</div>
-                <div class="tl-desc">退房，最後檢查是否遺漏物品。將租車油箱加滿。</div>
-                <div class="tl-tags"><span class="tl-tag">🏨 退房</span><span class="tl-tag">⛽ 加油</span></div>
+                <div class="tl-title">抵達香港轉機</div>
+                <div class="tl-desc">⚠️ 抵達香港 HKG，轉機時間僅 1 小時 45 分鐘，請留意轉機標示快速移動至下個登機門。</div>
+                <div class="tl-tags"><span class="tl-tag">🇭🇰 香港轉機</span><span class="tl-tag">🏃 緊湊</span></div>
             </div>
         </div>
 
@@ -63,28 +63,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%AD%B8%E9%82%84%E7%A7%9F%E8%BB%8A%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛫 17:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%90%AD%E4%B9%98%20CI916%20%E9%A3%9B%E5%BE%80%E5%8F%B0%E5%8C%97%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">歸還租車</div>
-                <div class="tl-desc">前往 KEF 機場附近歸還租車。檢查車輛狀況，辦理還車手續。</div>
-                <div class="tl-tags"><span class="tl-tag">🚗 還車</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🛫 10:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%A9%9F%E5%A0%B4%E5%A0%B1%E5%88%B0%E8%88%87%E5%85%8D%E7%A8%85%E5%BA%97%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">機場報到與免稅店</div>
-                <div class="tl-desc">辦理登機手續。逛 KEF 免稅店，最後機會買 Duty Free 的酒類與巧克力（冰島境內酒類很貴，機場免稅店是最後機會）。</div>
-                <div class="tl-tags"><span class="tl-tag">✈️ 報到</span><span class="tl-tag">🛍️ 免稅店</span></div>
+                <div class="tl-title">搭乘 CI916 飛往台北</div>
+                <div class="tl-desc">最後一段航程，搭乘中華航空回台。</div>
+                <div class="tl-tags"><span class="tl-tag">✈️ 回程</span></div>
             </div>
         </div>
 
@@ -95,12 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">✈️ 13:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%B5%B7%E9%A3%9B%E5%9B%9E%E5%AE%B6%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛬 19:25</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E5%8F%B0%E5%8C%97%20(TPE)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">起飛回家</div>
-                <div class="tl-desc">帶著滿滿的回憶離開冰島。再見了，這片冰與火之地！🇮🇸</div>
-                <div class="tl-tags"><span class="tl-tag">✈️ 返程</span><span class="tl-tag">👋 再見冰島</span></div>
+                <div class="tl-title">抵達台北 (TPE)</div>
+                <div class="tl-desc">順利抵達台灣，領取行李，結束這趟精彩的 16 天冰島大環島之旅！🎉</div>
+                <div class="tl-tags"><span class="tl-tag">🇹🇼 抵達台灣</span></div>
             </div>
         </div>
     </div>
@@ -114,7 +98,7 @@
         <div class="icon">🏨</div>
         <div>
             <div class="name">— 無住宿 —</div>
-            <div class="desc">✈️ 飛回台灣</div>
+            <div class="desc">🏡 溫暖的家</div>
         </div>
     </div>
 
@@ -132,13 +116,7 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>KEF 機場免稅店的酒比市區便宜很多。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>還車前先拍照記錄車輛狀況以避免爭議。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>冰島 VAT 退稅可在機場辦理（消費滿 6,000 ISK 可退）。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>16 天的冰島自駕之旅完美結束！🎉</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>回家盡快整理相片與遊記，與大家分享你在冰島看見的極光與黑沙灘！</span></div>
     </div>
 
     <!-- 導航按鈕 -->
@@ -147,9 +125,9 @@
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([63.98, -22.6], 11);
+            var map = L.map('map').setView([25.07, 121.23], 5);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"KEF 機場","lat":63.985,"lng":-22.606,"c":"#ef4444"}];
+            var spots = [{"name":"TPE 機場","lat":25.079,"lng":121.234,"c":"#10b981"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
