--- a/day2.html
+++ b/day2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 2 · 黃金圈經典路線｜冰島自駕 2026</title>
+    <title>Day 2 · 抵達冰島與雷克雅維克｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,8 +19,8 @@
     <div class="top">
         <a class="back" href="day1.html">←</a>
         <div>
-            <div class="top-title">Day 2 · 黃金圈經典路線</div>
-            <div class="top-sub">8月2日（週六）</div>
+            <div class="top-title">Day 2 · 抵達冰島與雷克雅維克</div>
+            <div class="top-sub">8月2日（週日）</div>
         </div>
     </div>
 
@@ -28,8 +28,8 @@
     <div class="banner" style="background:linear-gradient(135deg, #f59e0b, #f59e0bdd)">
         <div class="banner-num">02</div>
         <div class="banner-info">
-            <div class="theme">黃金圈經典路線 ⛲</div>
-            <div class="meta">8月2日（週六）・🏛️ 世界遺產</div>
+            <div class="theme">抵達冰島與雷克雅維克 🇮🇸</div>
+            <div class="meta">8月2日（週日）・🇩🇪 德國</div>
         </div>
     </div>
 
@@ -47,12 +47,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%BA%E7%99%BC%E5%89%8D%E5%BE%80%E8%BE%9B%E6%A0%BC%E7%B6%AD%E5%88%A9%E7%88%BE%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛬 06:55</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E6%B3%95%E8%98%AD%E5%85%8B%E7%A6%8F%20(FRA)%20%E8%BD%89%E6%A9%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">出發前往辛格維利爾國家公園</div>
-                <div class="tl-desc">從雷克雅維克出發，約 45 分鐘車程抵達世界遺產辛格維利爾。這裡是歐亞板塊與北美板塊交界處，也是冰島議會的誕生地（西元 930 年）。</div>
-                <div class="tl-tags"><span class="tl-tag">🏛️ 世界遺產</span><span class="tl-tag">🌍 板塊裂縫</span></div>
+                <div class="tl-title">抵達法蘭克福 (FRA) 轉機</div>
+                <div class="tl-desc">抵達法蘭克福，準備轉乘前往冰島的班機。</div>
+                <div class="tl-tags"><span class="tl-tag">🇩🇪 德國</span><span class="tl-tag">☕ 早餐</span></div>
             </div>
         </div>
 
@@ -63,12 +63,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 10:00 – 12:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8E%A2%E7%B4%A2%E8%BE%9B%E6%A0%BC%E7%B6%AD%E5%88%A9%E7%88%BE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛫 11:10</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%90%AD%E4%B9%98%20LH844%20%E9%A3%9B%E5%BE%80%E5%86%B0%E5%B3%B6%20(KEF)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">探索辛格維利爾</div>
-                <div class="tl-desc">沿步道穿越 Almannagjá 裂縫，觀賞 Öxarárfoss 瀑布。若有預約可體驗 Silfra 浮潛（世界最清澈的水域之一）。</div>
-                <div class="tl-tags"><span class="tl-tag">🥾 健行</span><span class="tl-tag">💧 Silfra</span></div>
+                <div class="tl-title">搭乘 LH844 飛往冰島 (KEF)</div>
+                <div class="tl-desc">飛往世界的盡頭。</div>
+                <div class="tl-tags"><span class="tl-tag">✈️ 冰島航班</span></div>
             </div>
         </div>
 
@@ -79,28 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 12:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Geysir%20%E9%96%93%E6%AD%87%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛬 12:55</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E5%87%B1%E5%A4%AB%E6%8B%89%E7%B6%AD%E5%85%8B%E5%9C%8B%E9%9A%9B%E6%A9%9F%E5%A0%B4%20(KEF)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">前往 Geysir 間歇泉</div>
-                <div class="tl-desc">車程約 50 分鐘。抵達後在附近餐廳午餐。</div>
-                <div class="tl-tags"><span class="tl-tag">🍽️ 午餐</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚶 13:30 – 14:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Geysir%20%E9%96%93%E6%AD%87%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">Geysir 間歇泉</div>
-                <div class="tl-desc">觀賞 Strokkur 間歇泉每 5-8 分鐘噴發一次（高達 20-30 公尺）。周圍還有彩色溫泉池。</div>
-                <div class="tl-tags"><span class="tl-tag">⛲ 間歇泉</span><span class="tl-tag">📸 打卡</span></div>
+                <div class="tl-title">抵達凱夫拉維克國際機場 (KEF)</div>
+                <div class="tl-desc">通過海關、提領行李後，前往租車櫃台取車。</div>
+                <div class="tl-tags"><span class="tl-tag">🇮🇸 抵達冰島</span><span class="tl-tag">🚗 取車</span></div>
             </div>
         </div>
 
@@ -112,11 +96,27 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 15:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%BB%83%E9%87%91%E7%80%91%E5%B8%83%20Gullfoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%E5%B8%82%E5%8D%80%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">黃金瀑布 Gullfoss</div>
-                <div class="tl-desc">冰島最著名的瀑布之一，雙層階梯式瀑布直墜 32 公尺深的峽谷。有上層與下層觀景台。霧氣瀰漫時可能看見彩虹！</div>
-                <div class="tl-tags"><span class="tl-tag">🌊 瀑布</span><span class="tl-tag">🌈 彩虹</span></div>
+                <div class="tl-title">前往雷克雅維克市區</div>
+                <div class="tl-desc">熟悉冰島路況，開往首都。可在途中 Bónus 超市購買初步補給。</div>
+                <div class="tl-tags"><span class="tl-tag">🛤️ 右駕</span><span class="tl-tag">🛒 採買</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time-row">
+                    <div class="tl-time">🏨 16:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%85%A5%E4%BD%8F%E5%B8%82%E5%8D%80%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
+                <div class="tl-title">入住市區住宿</div>
+                <div class="tl-desc">抵達住宿，放好行李休息片刻。</div>
+                <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span></div>
             </div>
         </div>
 
@@ -127,12 +127,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 17:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚶 18:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%B8%82%E5%8D%80%E6%BC%AB%E6%AD%A5%E8%88%87%E6%99%9A%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">返回雷克雅維克</div>
-                <div class="tl-desc">沿原路返回市區，或繞道 Kerið 火山口湖（入場約 400 ISK）。</div>
-                <div class="tl-tags"><span class="tl-tag">🌋 火山口湖</span></div>
+                <div class="tl-title">市區漫步與晚餐</div>
+                <div class="tl-desc">漫步 Laugavegur 主街，吃著名的冰島熱狗 Bæjarins Beztu Pylsur。</div>
+                <div class="tl-tags"><span class="tl-tag">🌭 熱狗</span><span class="tl-tag">🌆 首都</span></div>
             </div>
         </div>
     </div>
@@ -146,7 +146,7 @@
         <div class="icon">🏨</div>
         <div>
             <div class="name">雷克雅維克市區住宿</div>
-            <div class="desc">📍 同上一晚<br>🛏️ 第 2 晚</div>
+            <div class="desc">📍 雷克雅維克市區<br>🛏️ 第 2 晚<br>💡 休息調時差</div>
         </div>
     </div>
 
@@ -164,22 +164,20 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>黃金圈是冰島最熱門路線，建議早出發避開人潮。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>冰島天氣多變，建議將防風防水外套放在隨身可取得處。</span></div>
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Gullfoss 瀑布霧氣大，穿防水外套。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Silfra 浮潛需提前預約，水溫約 2°C。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>機場免稅店有賣便宜的酒，喜歡小酌可先買。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day3.html">Day 3 · 南海岸瀑布 →</a></div>
+    <div class="next-day"><a href="day3.html">Day 3 · 黃金圈 →</a></div>
 
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([64.3, -20.3], 9);
+            var map = L.map('map').setView([64.1466, -21.9426], 11);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"辛格維利爾","lat":64.256,"lng":-21.131,"c":"#10b981"},{"name":"Geysir","lat":64.31,"lng":-20.302,"c":"#f59e0b"},{"name":"Gullfoss","lat":64.327,"lng":-20.12,"c":"#2563eb"},{"name":"Kerið","lat":64.041,"lng":-20.885,"c":"#8b5cf6"}];
+            var spots = [{"name":"KEF 機場","lat":63.985,"lng":-22.606,"c":"#ef4444"},{"name":"Bæjarins Beztu","lat":64.148,"lng":-21.937,"c":"#f59e0b"},{"name":"Laugavegur","lat":64.147,"lng":-21.933,"c":"#2563eb"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
