--- a/day4.html
+++ b/day4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 4 · 黑沙灘與海蝕柱｜冰島自駕 2026</title>
+    <title>Day 4 · 南海岸與黑沙灘｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,8 +19,8 @@
     <div class="top">
         <a class="back" href="day3.html">←</a>
         <div>
-            <div class="top-title">Day 4 · 黑沙灘與海蝕柱</div>
-            <div class="top-sub">8月4日（週一）</div>
+            <div class="top-title">Day 4 · 南海岸與黑沙灘</div>
+            <div class="top-sub">8月4日（週二）</div>
         </div>
     </div>
 
@@ -28,8 +28,8 @@
     <div class="banner" style="background:linear-gradient(135deg, #1e293b, #1e293bdd)">
         <div class="banner-num">04</div>
         <div class="banner-info">
-            <div class="theme">黑沙灘與海蝕柱 🖤</div>
-            <div class="meta">8月4日（週一）・🏖️ 黑沙灘</div>
+            <div class="theme">南海岸與黑沙灘 🖤</div>
+            <div class="meta">8月4日（週二）・🌊 瀑布</div>
         </div>
     </div>
 
@@ -47,12 +47,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Reynisfjara%20%E9%BB%91%E6%B2%99%E7%81%98%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚶 09:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%A1%9E%E9%87%8C%E9%9B%85%E8%98%AD%E7%80%91%E5%B8%83%20Seljalandsfoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Reynisfjara 黑沙灘</div>
-                <div class="tl-desc">世界著名的黑色火山沙灘，配上整齊的玄武岩柱（Reynisdrangar）。注意：浪非常大且危險，絕對不要背對海！</div>
-                <div class="tl-tags"><span class="tl-tag">🏖️ 黑沙灘</span><span class="tl-tag">⚠️ 危險浪</span></div>
+                <div class="tl-title">塞里雅蘭瀑布 Seljalandsfoss</div>
+                <div class="tl-desc">可繞到後方的水簾洞瀑布，一旁還有 Gljúfrabúi 隱藏瀑布。</div>
+                <div class="tl-tags"><span class="tl-tag">🌊 瀑布</span><span class="tl-tag">📸 打卡</span></div>
             </div>
         </div>
 
@@ -64,11 +64,11 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 11:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%B6%AD%E5%85%8B%E6%95%99%E5%A0%82%E8%A7%80%E6%99%AF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%96%AF%E7%A7%91%E5%8A%A0%E7%80%91%E5%B8%83%20Sk%C3%B3gafoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">維克教堂觀景</div>
-                <div class="tl-desc">爬上維克小鎮紅頂教堂旁的山丘，俯瞰整個小鎮與黑沙灘全景。</div>
-                <div class="tl-tags"><span class="tl-tag">⛪ 教堂</span><span class="tl-tag">📸 全景</span></div>
+                <div class="tl-title">斯科加瀑布 Skógafoss</div>
+                <div class="tl-desc">巨大的彩虹瀑布，可爬 527 階樓梯到頂端俯瞰。</div>
+                <div class="tl-tags"><span class="tl-tag">🌈 瀑布</span></div>
             </div>
         </div>
 
@@ -79,12 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 12:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Skaftafell%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚗 14:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Dyrh%C3%B3laey%20%E6%B5%B7%E5%B2%AC%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">前往 Skaftafell</div>
-                <div class="tl-desc">沿一號公路向東，穿越壯觀的沙漠般熔岩沙地（Eldhraun 苔蘚熔岩地）。午餐路上解決。</div>
-                <div class="tl-tags"><span class="tl-tag">🛤️ 公路風景</span></div>
+                <div class="tl-title">Dyrhólaey 海岬</div>
+                <div class="tl-desc">黑沙灘全景與觀賞 Puffin（海鸚）的絕佳地點。</div>
+                <div class="tl-tags"><span class="tl-tag">🐧 Puffin</span><span class="tl-tag">⛰️ 懸崖</span></div>
             </div>
         </div>
 
@@ -95,12 +95,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 14:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Skaftafell%20%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚶 15:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Reynisfjara%20%E9%BB%91%E6%B2%99%E7%81%98%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Skaftafell 國家公園</div>
-                <div class="tl-desc">Vatnajökull 國家公園的一部分。推薦走 Svartifoss（黑瀑布）步道，約 1.5 小時來回，可欣賞獨特的玄武岩柱瀑布。</div>
-                <div class="tl-tags"><span class="tl-tag">🥾 健行</span><span class="tl-tag">🌊 黑瀑布</span></div>
+                <div class="tl-title">Reynisfjara 黑沙灘</div>
+                <div class="tl-desc">世界著名的黑沙灘與玄武岩柱。浪大危險，請背向陸地遠離海水！</div>
+                <div class="tl-tags"><span class="tl-tag">🏖️ 黑沙灘</span><span class="tl-tag">⚠️ 瘋狗浪</span></div>
             </div>
         </div>
 
@@ -111,12 +111,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🏨 17:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E5%86%B0%E6%B2%B3%E6%B9%96%E9%99%84%E8%BF%91%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🏨 17:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E7%B6%AD%E5%85%8B%20V%C3%ADk%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">抵達冰河湖附近住宿</div>
-                <div class="tl-desc">Check-in 並在住宿附近享用晚餐或自煮。</div>
-                <div class="tl-tags"><span class="tl-tag">🏨 住宿</span></div>
+                <div class="tl-title">抵達維克 Vík</div>
+                <div class="tl-desc">入住冰島最南端的小鎮。</div>
+                <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span></div>
             </div>
         </div>
     </div>
@@ -129,8 +129,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">Jökulsárlón 附近住宿</div>
-            <div class="desc">📍 冰河湖附近 Guesthouse<br>🛏️ 第 4 晚<br>💡 明天就是冰河湖！</div>
+            <div class="name">維克 Vík 小鎮住宿</div>
+            <div class="desc">📍 冰島最南端<br>🛏️ 第 4 晚</div>
         </div>
     </div>
 
@@ -148,11 +148,7 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Reynisfjara 黑沙灘的「Sneaker Waves」（突發巨浪）每年都有遊客傷亡，務必保持距離。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Svartifoss 步道有些陡坡但難度不高，穿登山鞋即可。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>從維克到冰河湖約 2.5 小時車程，沿途加油站少，先在維克加滿。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>黑沙灘的「Sneaker Waves」（突發巨浪）極具危險性，請務必與海浪保持距離。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
@@ -161,9 +157,9 @@
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([63.8, -17.5], 8);
+            var map = L.map('map').setView([63.5, -19.6], 9);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Reynisfjara","lat":63.404,"lng":-19.045,"c":"#1e293b"},{"name":"Vík 教堂","lat":63.419,"lng":-19.006,"c":"#ef4444"},{"name":"Svartifoss","lat":64.028,"lng":-16.975,"c":"#2563eb"}];
+            var spots = [{"name":"Seljalandsfoss","lat":63.616,"lng":-19.993,"c":"#10b981"},{"name":"Skógafoss","lat":63.532,"lng":-19.511,"c":"#2563eb"},{"name":"Reynisfjara","lat":63.404,"lng":-19.045,"c":"#1e293b"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
