--- a/day5.html
+++ b/day5.html
@@ -20,7 +20,7 @@
         <a class="back" href="day4.html">←</a>
         <div>
             <div class="top-title">Day 5 · 冰河湖與鑽石沙灘</div>
-            <div class="top-sub">8月5日（週二）</div>
+            <div class="top-sub">8月5日（週三）</div>
         </div>
     </div>
 
@@ -29,7 +29,7 @@
         <div class="banner-num">05</div>
         <div class="banner-info">
             <div class="theme">冰河湖與鑽石沙灘 🧊</div>
-            <div class="meta">8月5日（週二）・🧊 冰山</div>
+            <div class="meta">8月5日（週三）・🚗 自駕</div>
         </div>
     </div>
 
@@ -47,12 +47,44 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 09:00</div>
+                    <div class="tl-time">🚗 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Skaftafell%20%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
+                <div class="tl-title">前往 Skaftafell 國家公園</div>
+                <div class="tl-desc">沿著一號公路穿越苔原，進入瓦特納冰川國家公園區域。</div>
+                <div class="tl-tags"><span class="tl-tag">🚗 自駕</span><span class="tl-tag">🏔️ 冰川</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time-row">
+                    <div class="tl-time">🥾 10:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Svartifoss%20%E9%BB%91%E7%80%91%E5%B8%83%E5%81%A5%E8%A1%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
+                <div class="tl-title">Svartifoss 黑瀑布健行</div>
+                <div class="tl-desc">來回約 1.5 小時，欣賞被柱狀玄武岩包圍的獨特瀑布。</div>
+                <div class="tl-tags"><span class="tl-tag">🥾 健行</span><span class="tl-tag">🌊 瀑布</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time-row">
+                    <div class="tl-time">🚶 14:00</div>
                     <a href="https://www.google.com/maps/search/?api=1&query=J%C3%B6kuls%C3%A1rl%C3%B3n%20%E5%86%B0%E6%B2%B3%E6%B9%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
                 <div class="tl-title">Jökulsárlón 冰河湖</div>
-                <div class="tl-desc">冰島最著名的景點之一！漂浮著藍色冰山的冰河湖。可搭乘水陸兩棲船 (Amphibian Boat Tour) 深入冰山之間。</div>
-                <div class="tl-tags"><span class="tl-tag">🧊 冰山</span><span class="tl-tag">🚤 遊船</span></div>
+                <div class="tl-desc">夢幻的藍色冰山。可預約搭船在冰山之間近距離穿梭。</div>
+                <div class="tl-tags"><span class="tl-tag">🧊 冰河湖</span><span class="tl-tag">🚤 遊船</span></div>
             </div>
         </div>
 
@@ -63,44 +95,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 11:00</div>
+                    <div class="tl-time">🚶 16:00</div>
                     <a href="https://www.google.com/maps/search/?api=1&query=%E9%91%BD%E7%9F%B3%E6%B2%99%E7%81%98%20Diamond%20Beach%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
                 <div class="tl-title">鑽石沙灘 Diamond Beach</div>
-                <div class="tl-desc">冰河湖對面的黑沙灘，散落著被海浪沖上岸的透明冰塊，在陽光下如鑽石般閃耀。攝影天堂！</div>
-                <div class="tl-tags"><span class="tl-tag">💎 鑽石沙灘</span><span class="tl-tag">📸 攝影</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🥾 13:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%86%B0%E5%B7%9D%E5%81%A5%E8%A1%8C%20(%E9%A0%90%E7%B4%84)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">冰川健行 (預約)</div>
-                <div class="tl-desc">參加 Vatnajökull 冰川健行導覽團（約 3 小時），穿上冰爪行走在歐洲最大冰川上。需提前預約。</div>
-                <div class="tl-tags"><span class="tl-tag">🧗 冰川健行</span><span class="tl-tag">⛏️ 冰爪</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚗 17:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E6%9D%B1%E9%83%A8%E5%B3%BD%E7%81%A3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">前往東部峽灣</div>
-                <div class="tl-desc">開始向東北方前進，進入東部峽灣地區。沿途風景逐漸從冰川轉為峽灣。</div>
-                <div class="tl-tags"><span class="tl-tag">🚗 自駕</span></div>
+                <div class="tl-desc">冰河湖出海口旁，晶瑩剔透的冰塊散落在黑沙灘上。</div>
+                <div class="tl-tags"><span class="tl-tag">💎 鑽石沙灘</span></div>
             </div>
         </div>
 
@@ -111,12 +111,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🏨 19:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%9D%B1%E9%83%A8%E5%B3%BD%E7%81%A3%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🏨 18:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E8%B5%AB%E6%9C%AC%20H%C3%B6fn%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">東部峽灣住宿</div>
-                <div class="tl-desc">在 Djúpivogur 或 Höfn 小鎮入住。推薦品嘗當地著名的冰島龍蝦 (Langoustine)。</div>
-                <div class="tl-tags"><span class="tl-tag">🦞 龍蝦</span><span class="tl-tag">🏨 住宿</span></div>
+                <div class="tl-title">前往赫本 Höfn</div>
+                <div class="tl-desc">入住位於東南部的龍蝦小鎮 Höfn。</div>
+                <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span><span class="tl-tag">🦞 龍蝦</span></div>
             </div>
         </div>
     </div>
@@ -129,8 +129,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">Höfn 小鎮住宿</div>
-            <div class="desc">📍 赫本小鎮<br>🛏️ 第 5 晚<br>💡 冰島龍蝦之都</div>
+            <div class="name">Höfn 赫本小鎮住宿</div>
+            <div class="desc">📍 龍蝦之都<br>🛏️ 第 5 晚</div>
         </div>
     </div>
 
@@ -148,11 +148,7 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>冰河湖遊船建議提前上網預訂。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>冰川健行需預約導覽團，不可自行上冰川。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Höfn 的 Pakkhús 餐廳龍蝦湯非常推薦。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>赫本小鎮有名的 Pakkhús 餐廳龍蝦湯非常推薦。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
@@ -161,9 +157,9 @@
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([64.15, -16], 9);
+            var map = L.map('map').setView([64.07, -16.23], 9);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Jökulsárlón","lat":64.078,"lng":-16.231,"c":"#06b6d4"},{"name":"Diamond Beach","lat":64.077,"lng":-16.218,"c":"#a855f7"},{"name":"Höfn","lat":64.254,"lng":-15.208,"c":"#f59e0b"}];
+            var spots = [{"name":"Svartifoss","lat":64.028,"lng":-16.975,"c":"#2563eb"},{"name":"Jökulsárlón","lat":64.078,"lng":-16.231,"c":"#06b6d4"},{"name":"Höfn","lat":64.254,"lng":-15.208,"c":"#f59e0b"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
