--- a/day6.html
+++ b/day6.html
@@ -20,7 +20,7 @@
         <a class="back" href="day5.html">←</a>
         <div>
             <div class="top-title">Day 6 · 東部峽灣探索</div>
-            <div class="top-sub">8月6日（週三）</div>
+            <div class="top-sub">8月6日（週四）</div>
         </div>
     </div>
 
@@ -29,7 +29,7 @@
         <div class="banner-num">06</div>
         <div class="banner-info">
             <div class="theme">東部峽灣探索 ⛰️</div>
-            <div class="meta">8月6日（週三）・🦌 馴鹿</div>
+            <div class="meta">8月6日（週四）・🦌 馴鹿</div>
         </div>
     </div>
 
@@ -51,8 +51,8 @@
                     <a href="https://www.google.com/maps/search/?api=1&query=%E6%9D%B1%E9%83%A8%E5%B3%BD%E7%81%A3%E6%99%AF%E8%A7%80%E5%85%AC%E8%B7%AF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
                 <div class="tl-title">東部峽灣景觀公路</div>
-                <div class="tl-desc">沿海岸線蜿蜒前行，經過一個又一個寧靜的峽灣。沿途可能遇見野生馴鹿！</div>
-                <div class="tl-tags"><span class="tl-tag">🦌 馴鹿</span><span class="tl-tag">🛤️ 峽灣公路</span></div>
+                <div class="tl-desc">沿海岸線蜿蜒前行，途徑寧靜的峽灣，留意路旁是否有野生馴鹿。</div>
+                <div class="tl-tags"><span class="tl-tag">🦌 馴鹿</span><span class="tl-tag">🛤️ 公路</span></div>
             </div>
         </div>
 
@@ -63,12 +63,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 11:00</div>
+                    <div class="tl-time">🚶 11:30</div>
                     <a href="https://www.google.com/maps/search/?api=1&query=F%C3%A1skr%C3%BA%C3%B0sfj%C3%B6r%C3%B0ur%20%E6%B3%95%E5%9C%8B%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
                 <div class="tl-title">Fáskrúðsfjörður 法國小鎮</div>
-                <div class="tl-desc">這個小鎮曾是法國漁民的基地，街道雙語標示（冰島文/法文）。有法國漁民博物館。</div>
-                <div class="tl-tags"><span class="tl-tag">🇫🇷 法國風情</span><span class="tl-tag">🏘️ 漁村</span></div>
+                <div class="tl-desc">街道充滿雙語標示，曾是法國漁民的基地。</div>
+                <div class="tl-tags"><span class="tl-tag">🇫🇷 法國風情</span></div>
             </div>
         </div>
 
@@ -79,28 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 13:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Rey%C3%B0arfj%C3%B6r%C3%B0ur%20%26%20%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚗 14:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Sey%C3%B0isfj%C3%B6r%C3%B0ur%20%E5%A1%9E%E6%BF%9F%E6%96%AF%E8%8F%B2%E5%8E%84%E6%BE%A4%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Reyðarfjörður & 午餐</div>
-                <div class="tl-desc">在東峽灣最大的峽灣小鎮用餐休息。有二戰博物館可參觀。</div>
-                <div class="tl-tags"><span class="tl-tag">🍽️ 午餐</span><span class="tl-tag">🏛️ 博物館</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚗 15:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Egilssta%C3%B0ir%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">前往 Egilsstaðir</div>
-                <div class="tl-desc">前往東部最大城鎮。途中可繞道 Lagarfljót 湖（傳說中有水怪！）。</div>
-                <div class="tl-tags"><span class="tl-tag">🐉 水怪傳說</span><span class="tl-tag">🚗 自駕</span></div>
+                <div class="tl-title">Seyðisfjörður 塞濟斯菲厄澤</div>
+                <div class="tl-desc">被群山環繞的美麗彩虹步道小鎮，也是白日夢冒險王的滑板公路拍攝地。</div>
+                <div class="tl-tags"><span class="tl-tag">🌈 彩虹教堂</span><span class="tl-tag">🎬 電影場景</span></div>
             </div>
         </div>
 
@@ -112,11 +96,11 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🏨 17:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Egilssta%C3%B0ir%20%E5%85%A5%E4%BD%8F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Egilssta%C3%B0ir%20%E5%9F%83%E4%BC%8A%E7%88%BE%E6%96%AF%E5%A1%94%E6%BF%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Egilsstaðir 入住</div>
-                <div class="tl-desc">在東部首府整頓休息，補給超市物資。</div>
-                <div class="tl-tags"><span class="tl-tag">🏨 住宿</span><span class="tl-tag">🛒 補給</span></div>
+                <div class="tl-title">Egilsstaðir 埃伊爾斯塔濟</div>
+                <div class="tl-desc">東部最大城鎮，進行物資補給，入住民宿。</div>
+                <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span><span class="tl-tag">🛒 補給</span></div>
             </div>
         </div>
     </div>
@@ -129,8 +113,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">Egilsstaðir 住宿</div>
-            <div class="desc">📍 東部首府<br>🛏️ 第 6 晚<br>💡 東部最大城鎮，補給方便</div>
+            <div class="name">Egilsstaðir 周邊住宿</div>
+            <div class="desc">📍 東部首府<br>🛏️ 第 6 晚</div>
         </div>
     </div>
 
@@ -148,22 +132,18 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>東部峽灣人煙稀少，加油站較少，出發前加滿油。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>如果看到馴鹿，減速慢行並保持距離。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>東部峽灣是冰島最少遊客的區域，享受寧靜！</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>東部峽灣人煙稀少，加油站不密集，經過城鎮時建議加滿油。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day7.html">Day 7 · 東峽灣至米湖 →</a></div>
+    <div class="next-day"><a href="day7.html">Day 7 · 峽谷與米湖 →</a></div>
 
     <script>
         // 地圖
         try {
             var map = L.map('map').setView([65, -14.5], 8);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Fáskrúðsfjörður","lat":64.93,"lng":-14.013,"c":"#8b5cf6"},{"name":"Reyðarfjörður","lat":65.032,"lng":-14.199,"c":"#2563eb"},{"name":"Egilsstaðir","lat":65.25,"lng":-14.395,"c":"#f59e0b"}];
+            var spots = [{"name":"Seyðisfjörður","lat":65.259,"lng":-14.01,"c":"#ef4444"},{"name":"Egilsstaðir","lat":65.25,"lng":-14.395,"c":"#f59e0b"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
