--- a/day7.html
+++ b/day7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 7 · 東峽灣至米湖｜冰島自駕 2026</title>
+    <title>Day 7 · 峽谷與米湖｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,8 +19,8 @@
     <div class="top">
         <a class="back" href="day6.html">←</a>
         <div>
-            <div class="top-title">Day 7 · 東峽灣至米湖</div>
-            <div class="top-sub">8月7日（週四）</div>
+            <div class="top-title">Day 7 · 峽谷與米湖</div>
+            <div class="top-sub">8月7日（週五）</div>
         </div>
     </div>
 
@@ -28,8 +28,8 @@
     <div class="banner" style="background:linear-gradient(135deg, #3b82f6, #3b82f6dd)">
         <div class="banner-num">07</div>
         <div class="banner-info">
-            <div class="theme">東峽灣至米湖 🚗</div>
-            <div class="meta">8月7日（週四）・🏔️ 峽谷</div>
+            <div class="theme">峽谷與米湖 🏞️</div>
+            <div class="meta">8月7日（週五）・🏔️ 玄武岩峽谷</div>
         </div>
     </div>
 
@@ -48,11 +48,11 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 08:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%20Stu%C3%B0lagil%20%E5%B3%BD%E8%B0%B7%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Stu%C3%B0lagil%20%E5%B3%BD%E8%B0%B7%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">前往 Stuðlagil 峽谷</div>
-                <div class="tl-desc">冰島最壯觀的玄武岩柱峽谷！需從主路繞道約 30 分鐘。沿溪谷步行約 40 分鐘抵達。</div>
-                <div class="tl-tags"><span class="tl-tag">🏔️ 峽谷</span><span class="tl-tag">📸 網紅景點</span></div>
+                <div class="tl-title">Stuðlagil 峽谷</div>
+                <div class="tl-desc">冰島最壯觀的玄武岩柱峽谷，翠綠色的河水穿梭其中。</div>
+                <div class="tl-tags"><span class="tl-tag">🏔️ 玄武岩峽谷</span></div>
             </div>
         </div>
 
@@ -67,24 +67,8 @@
                     <a href="https://www.google.com/maps/search/?api=1&query=%E9%BB%9B%E6%8F%90%E7%80%91%E5%B8%83%20Dettifoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
                 <div class="tl-title">黛提瀑布 Dettifoss</div>
-                <div class="tl-desc">歐洲最強大的瀑布！水量驚人，每秒 500 立方公尺。從東岸 (862 號公路) 或西岸 (864 號公路) 都能觀賞。</div>
-                <div class="tl-tags"><span class="tl-tag">🌊 最強瀑布</span><span class="tl-tag">💨 水霧</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚶 13:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Selfoss%20%E7%80%91%E5%B8%83%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">Selfoss 瀑布</div>
-                <div class="tl-desc">Dettifoss 上游約 1 公里的另一座瀑布，寬廣而優雅，遊客較少。</div>
-                <div class="tl-tags"><span class="tl-tag">🌊 瀑布</span><span class="tl-tag">🥾 步行</span></div>
+                <div class="tl-desc">歐洲水流量最大、最強勁的瀑布 (普羅米修斯拍攝場景)。</div>
+                <div class="tl-tags"><span class="tl-tag">🌊 大瀑布</span><span class="tl-tag">🎬 電影</span></div>
             </div>
         </div>
 
@@ -99,7 +83,7 @@
                     <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E7%B1%B3%E6%B9%96%20M%C3%BDvatn%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
                 <div class="tl-title">前往米湖 Mývatn</div>
-                <div class="tl-desc">沿一號公路前往米湖區域。抵達後先在住宿放行李。</div>
+                <div class="tl-desc">逐漸駛入地熱景觀豐富的米湖區域。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 自駕</span></div>
             </div>
         </div>
@@ -112,10 +96,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">♨️ 17:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%B1%B3%E6%B9%96%E8%87%AA%E7%84%B6%E6%BA%AB%E6%B3%89%20M%C3%BDvatn%20Nature%20Baths%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%B1%B3%E6%B9%96%E6%BA%AB%E6%B3%89%20Nature%20Baths%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">米湖自然溫泉 Mývatn Nature Baths</div>
-                <div class="tl-desc">被稱為「北方的藍湖」，但人少很多！在蒸氣籠罩的溫泉中放鬆，欣賞米湖景色。</div>
+                <div class="tl-title">米湖溫泉 Nature Baths</div>
+                <div class="tl-desc">被稱為「北方的藍湖」，享受泡湯放鬆舒緩旅途疲勞。</div>
                 <div class="tl-tags"><span class="tl-tag">♨️ 溫泉</span><span class="tl-tag">🌅 夕陽</span></div>
             </div>
         </div>
@@ -130,7 +114,7 @@
         <div class="icon">🏨</div>
         <div>
             <div class="name">米湖周邊住宿</div>
-            <div class="desc">📍 Mývatn 湖畔<br>🛏️ 第 7 晚（共住 2 晚）<br>💡 地熱奇觀圍繞</div>
+            <div class="desc">📍 Mývatn<br>🛏️ 第 7 晚</div>
         </div>
     </div>
 
@@ -148,11 +132,7 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Stuðlagil 峽谷步道沿河，穿防水鞋。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Dettifoss 霧氣極大，相機防水準備。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>米湖區域的蚊蟲（midges）很多，帶頭巾或防蟲帽。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Dettifoss 水霧很大，小心相機淋濕。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
@@ -163,7 +143,7 @@
         try {
             var map = L.map('map').setView([65.5, -16.5], 8);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Stuðlagil","lat":65.163,"lng":-15.325,"c":"#8b5cf6"},{"name":"Dettifoss","lat":65.815,"lng":-16.385,"c":"#2563eb"},{"name":"Mývatn Baths","lat":65.631,"lng":-16.847,"c":"#ef4444"}];
+            var spots = [{"name":"Stuðlagil","lat":65.163,"lng":-15.325,"c":"#8b5cf6"},{"name":"Dettifoss","lat":65.815,"lng":-16.385,"c":"#2563eb"},{"name":"Mývatn Baths","lat":65.631,"lng":-16.847,"c":"#0ea5e9"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
