--- a/day8.html
+++ b/day8.html
@@ -20,7 +20,7 @@
         <a class="back" href="day7.html">←</a>
         <div>
             <div class="top-title">Day 8 · 米湖地熱奇觀</div>
-            <div class="top-sub">8月8日（週五）</div>
+            <div class="top-sub">8月8日（週六）</div>
         </div>
     </div>
 
@@ -28,8 +28,8 @@
     <div class="banner" style="background:linear-gradient(135deg, #ef4444, #ef4444dd)">
         <div class="banner-num">08</div>
         <div class="banner-info">
-            <div class="theme">米湖地熱奇觀 ♨️</div>
-            <div class="meta">8月8日（週五）・🌋 地熱</div>
+            <div class="theme">米湖地熱奇觀 🌋</div>
+            <div class="meta">8月8日（週六）・🌋 外星地貌</div>
         </div>
     </div>
 
@@ -48,11 +48,11 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Hverir%20%E5%9C%B0%E7%86%B1%E5%8D%80%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Hverir%20%E7%A1%AB%E7%A3%BA%E5%9C%B0%E7%86%B1%E5%8D%80%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Hverir 地熱區</div>
-                <div class="tl-desc">硫磺蒸氣噴口與沸泥池形成的外星地表。注意不要離開步道！地面溫度可達 100°C。</div>
-                <div class="tl-tags"><span class="tl-tag">🌋 地熱</span><span class="tl-tag">⚠️ 高溫</span></div>
+                <div class="tl-title">Hverir 硫磺地熱區</div>
+                <div class="tl-desc">像火星一般的地表，到處都是沸騰的泥漿與白煙。</div>
+                <div class="tl-tags"><span class="tl-tag">🌋 外星地貌</span></div>
             </div>
         </div>
 
@@ -64,11 +64,11 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 10:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Krafla%20%E7%81%AB%E5%B1%B1%E5%8F%A3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Krafla%20%E7%81%AB%E5%B1%B1%E8%88%87%20V%C3%ADti%20%E7%81%AB%E5%B1%B1%E5%8F%A3%E6%B9%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Krafla 火山口</div>
-                <div class="tl-desc">Víti 火山口湖呈現夢幻的藍綠色。周圍是 Krafla 火山地熱系統。</div>
-                <div class="tl-tags"><span class="tl-tag">🌋 火山口</span><span class="tl-tag">💧 翠綠湖</span></div>
+                <div class="tl-title">Krafla 火山與 Víti 火山口湖</div>
+                <div class="tl-desc">巨大的火山口湖，呈現夢幻的不透明翠綠色。</div>
+                <div class="tl-tags"><span class="tl-tag">💧 火山口湖</span></div>
             </div>
         </div>
 
@@ -79,28 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 12:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Dimmuborgir%20%E6%9A%97%E9%BB%91%E5%9F%8E%E5%A0%A1%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚶 13:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Dimmuborgir%20%E9%BB%91%E8%89%B2%E5%9F%8E%E5%A0%A1%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Dimmuborgir 暗黑城堡</div>
-                <div class="tl-desc">奇特的熔岩迷宮，被稱為「黑暗城堡」。傳說是冰島聖誕老人（Yule Lads）的家。步道輕鬆。</div>
-                <div class="tl-tags"><span class="tl-tag">🏰 熔岩迷宮</span><span class="tl-tag">🎅 聖誕傳說</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🍽️ 13:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%8D%88%E9%A4%90%20%E2%80%94%20Vogafj%C3%B3s%20%E8%BE%B2%E5%A0%B4%E9%A4%90%E5%BB%B3%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">午餐 — Vogafjós 農場餐廳</div>
-                <div class="tl-desc">在牧場餐廳享用道地冰島食物，可以透過玻璃窗看到隔壁的乳牛！推薦自製起司與冰島麵包。</div>
-                <div class="tl-tags"><span class="tl-tag">🍽️ 農場餐廳</span><span class="tl-tag">🧀 起司</span></div>
+                <div class="tl-title">Dimmuborgir 黑色城堡</div>
+                <div class="tl-desc">奇特的火山熔岩迷宮，傳說中聖誕老人的故鄉。</div>
+                <div class="tl-tags"><span class="tl-tag">🏰 熔岩</span></div>
             </div>
         </div>
 
@@ -112,11 +96,11 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚶 15:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Grj%C3%B3tagj%C3%A1%20%E6%BA%AB%E6%B3%89%E6%B4%9E%E7%A9%B4%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Grj%C3%B3tagj%C3%A1%20%E6%B4%9E%E7%A9%B4%E6%BA%AB%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Grjótagjá 溫泉洞穴</div>
-                <div class="tl-desc">隱藏在熔岩裂縫中的地下溫泉（權力遊戲拍攝地之一）。目前禁止入水，但可參觀。</div>
-                <div class="tl-tags"><span class="tl-tag">🎬 權力遊戲</span><span class="tl-tag">🕳️ 洞穴</span></div>
+                <div class="tl-title">Grjótagjá 洞穴溫泉</div>
+                <div class="tl-desc">隱藏的地下溫泉，冰與火之歌的經典場景。</div>
+                <div class="tl-tags"><span class="tl-tag">🎬 冰與火之歌</span></div>
             </div>
         </div>
 
@@ -127,12 +111,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 16:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E7%B1%B3%E6%B9%96%E6%B9%96%E7%95%94%E6%95%A3%E6%AD%A5%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🏨 17:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E7%B1%B3%E6%B9%96%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">米湖湖畔散步</div>
-                <div class="tl-desc">沿湖畔步道享受寧靜的湖光山色。觀察各種水鳥。</div>
-                <div class="tl-tags"><span class="tl-tag">🦆 水鳥</span><span class="tl-tag">🚶 散步</span></div>
+                <div class="tl-title">返回米湖住宿</div>
+                <div class="tl-desc">在湖畔悠閒散步，休息。</div>
+                <div class="tl-tags"><span class="tl-tag">🏨 住宿</span></div>
             </div>
         </div>
     </div>
@@ -146,7 +130,7 @@
         <div class="icon">🏨</div>
         <div>
             <div class="name">米湖周邊住宿</div>
-            <div class="desc">📍 同上一晚<br>🛏️ 第 8 晚</div>
+            <div class="desc">📍 同上<br>🛏️ 第 8 晚</div>
         </div>
     </div>
 
@@ -164,22 +148,18 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Hverir 地熱區的硫磺味很重，敏感者可戴口罩。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Krafla 周邊道路可能有碎石路段。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>米湖的蚊蟲名稱「Mý」就是蚊子的意思，做好防護。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Hverir 的硫磺味極重，且地表溫度高，務必走在規劃好的步道上。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day9.html">Day 9 · 胡薩維克賞鯨 →</a></div>
+    <div class="next-day"><a href="day9.html">Day 9 · 胡薩維克與阿克雷里 →</a></div>
 
     <script>
         // 地圖
         try {
             var map = L.map('map').setView([65.65, -16.9], 10);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Hverir","lat":65.641,"lng":-16.806,"c":"#ef4444"},{"name":"Krafla Víti","lat":65.717,"lng":-16.762,"c":"#f97316"},{"name":"Dimmuborgir","lat":65.591,"lng":-16.912,"c":"#1e293b"},{"name":"Grjótagjá","lat":65.627,"lng":-16.883,"c":"#06b6d4"}];
+            var spots = [{"name":"Hverir","lat":65.641,"lng":-16.806,"c":"#ef4444"},{"name":"Krafla","lat":65.717,"lng":-16.762,"c":"#f59e0b"},{"name":"Grjótagjá","lat":65.627,"lng":-16.883,"c":"#06b6d4"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
