--- a/day9.html
+++ b/day9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 9 · 胡薩維克賞鯨｜冰島自駕 2026</title>
+    <title>Day 9 · 胡薩維克賞鯨與阿克雷里｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,8 +19,8 @@
     <div class="top">
         <a class="back" href="day8.html">←</a>
         <div>
-            <div class="top-title">Day 9 · 胡薩維克賞鯨</div>
-            <div class="top-sub">8月9日（週六）</div>
+            <div class="top-title">Day 9 · 胡薩維克賞鯨與阿克雷里</div>
+            <div class="top-sub">8月9日（週日）</div>
         </div>
     </div>
 
@@ -28,8 +28,8 @@
     <div class="banner" style="background:linear-gradient(135deg, #14b8a6, #14b8a6dd)">
         <div class="banner-num">09</div>
         <div class="banner-info">
-            <div class="theme">胡薩維克賞鯨 🐋</div>
-            <div class="meta">8月9日（週六）・🚗 自駕</div>
+            <div class="theme">胡薩維克賞鯨與阿克雷里 🐋</div>
+            <div class="meta">8月9日（週日）・🚗 自駕</div>
         </div>
     </div>
 
@@ -48,10 +48,10 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🚗 08:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E8%83%A1%E8%96%A9%E7%B6%AD%E5%85%8B%20H%C3%BAsav%C3%ADk%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E6%AD%90%E6%B4%B2%E8%B3%9E%E9%AF%A8%E4%B9%8B%E9%83%BD%20H%C3%BAsav%C3%ADk%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">前往胡薩維克 Húsavík</div>
-                <div class="tl-desc">從米湖前往歐洲賞鯨之都胡薩維克，車程約 50 分鐘。</div>
+                <div class="tl-title">前往歐洲賞鯨之都 Húsavík</div>
+                <div class="tl-desc">開往北方迷人的港口小鎮。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 自駕</span></div>
             </div>
         </div>
@@ -64,11 +64,11 @@
             <div class="tl-card">
                 <div class="tl-time-row">
                     <div class="tl-time">🐋 10:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%B3%9E%E9%AF%A8%E5%87%BA%E6%B5%B7%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E4%B9%98%E8%88%B9%E8%B3%9E%E9%AF%A8%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">賞鯨出海</div>
-                <div class="tl-desc">搭乘傳統橡木船出海賞鯨（約 3 小時）。8 月常見座頭鯨、小鬚鯨，有時甚至能看到藍鯨！</div>
-                <div class="tl-tags"><span class="tl-tag">🐋 賞鯨</span><span class="tl-tag">🚢 出海</span></div>
+                <div class="tl-title">乘船賞鯨</div>
+                <div class="tl-desc">搭乘橡木船出海，8月是看座頭鯨的最佳季節。</div>
+                <div class="tl-tags"><span class="tl-tag">🐋 賞鯨</span></div>
             </div>
         </div>
 
@@ -79,44 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🍽️ 13:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%8D%88%E9%A4%90%20%E2%80%94%20Gamli%20Baukur%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">午餐 — Gamli Baukur</div>
-                <div class="tl-desc">港口邊的餐廳，新鮮海鮮料理。推薦鯨魚觀察配啤酒。</div>
-                <div class="tl-tags"><span class="tl-tag">🍽️ 海鮮</span><span class="tl-tag">🍺 啤酒</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚶 14:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%83%A1%E8%96%A9%E7%B6%AD%E5%85%8B%E9%AF%A8%E9%AD%9A%E5%8D%9A%E7%89%A9%E9%A4%A8%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">胡薩維克鯨魚博物館</div>
-                <div class="tl-desc">北歐最棒的鯨魚博物館，有完整的鯨魚骨架展示。互動展覽適合各年齡。</div>
-                <div class="tl-tags"><span class="tl-tag">🏛️ 博物館</span><span class="tl-tag">🐋 鯨魚</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚗 16:00</div>
+                    <div class="tl-time">🚗 14:00</div>
                     <a href="https://www.google.com/maps/search/?api=1&query=%E7%9C%BE%E7%A5%9E%E7%80%91%E5%B8%83%20Go%C3%B0afoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
                 <div class="tl-title">眾神瀑布 Goðafoss</div>
-                <div class="tl-desc">回程路上經過「眾神瀑布」，寬 30 公尺、高 12 公尺。傳說冰島改信基督教時，異教神像被拋入此瀑布。</div>
-                <div class="tl-tags"><span class="tl-tag">🌊 眾神瀑布</span><span class="tl-tag">📖 傳說</span></div>
+                <div class="tl-desc">環島路線上最經典的馬蹄形瀑布。</div>
+                <div class="tl-tags"><span class="tl-tag">🌊 瀑布</span></div>
             </div>
         </div>
 
@@ -127,12 +95,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🏨 18:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E9%98%BF%E5%85%8B%E9%9B%B7%E9%87%8C%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🏨 16:30</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E9%98%BF%E5%85%8B%E9%9B%B7%E9%87%8C%20Akureyri%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">抵達阿克雷里</div>
-                <div class="tl-desc">入住北部首都阿克雷里的住宿。</div>
-                <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span></div>
+                <div class="tl-title">抵達阿克雷里 Akureyri</div>
+                <div class="tl-desc">冰島第二大城、北部首都。入住後可欣賞著名的大教堂與愛心紅綠燈。</div>
+                <div class="tl-tags"><span class="tl-tag">❤️ 愛心紅綠燈</span><span class="tl-tag">🏙️ 城市</span></div>
             </div>
         </div>
     </div>
@@ -145,8 +113,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">阿克雷里住宿</div>
-            <div class="desc">📍 北部首都<br>🛏️ 第 9 晚（共住 2 晚）<br>💡 冰島第二大城</div>
+            <div class="name">阿克雷里市區住宿</div>
+            <div class="desc">📍 北部首都<br>🛏️ 第 9 晚</div>
         </div>
     </div>
 
@@ -164,15 +132,11 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>賞鯨請提前在 North Sailing 或 Gentle Giants 網站預訂。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>海上風大且冷，帶暖和的衣物。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>暈船者建議提前吃藥。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>出海風浪大且十分寒冷，建議加穿防風保暖衣物（船上通常會提供連身保暖衣）。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day10.html">Day 10 · 阿克雷里 →</a></div>
+    <div class="next-day"><a href="day10.html">Day 10 · 西北公路 →</a></div>
 
     <script>
         // 地圖
