--- a/index.html
+++ b/index.html
@@ -150,6 +150,22 @@
       </div>
     </div>
 
+    <!-- 航班與旅遊資訊 -->
+    <div class="info-card flight-card">
+      <div class="ic-header">
+        <i data-lucide="plane"></i>
+        <span>航班與票務資訊</span>
+      </div>
+      <div class="flight-details">
+        <div class="flight-route"><strong>去程 (8/1)</strong>：TPE 18:10 ➔ HKG ➔ FRA ➔ KEF 12:55(+1)</div>
+        <div class="flight-route"><strong>回程 (8/15)</strong>：KEF 14:20 ➔ FRA ➔ HKG ➔ TPE 19:25(+1)</div>
+        <div class="flight-note">✈️ 中華航空：02-412-9000 (代號 DQREFR)</div>
+        <div class="flight-note">✈️ 漢莎航空：02-2868-2313 (代號 DBSFXD)</div>
+        <div class="flight-note text-red">⚠️ 注意：法蘭克福與香港轉機時間緊湊，請儘快移動</div>
+        <div class="flight-note">🧳 行李：1件免費託運｜🛂 簽證：免簽 (>6個月效期)</div>
+      </div>
+    </div>
+
     <!-- 必備行李清單 -->
     <div class="info-card packing-card">
       <div class="ic-header">
