--- a/day1.html
+++ b/day1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 1 · 抵達雷克雅維克｜冰島自駕 2026</title>
+    <title>Day 1 · 啟程：飛往冰島｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,8 +19,8 @@
     <div class="top">
         <a class="back" href="index.html">←</a>
         <div>
-            <div class="top-title">Day 1 · 抵達雷克雅維克</div>
-            <div class="top-sub">8月1日（週五）</div>
+            <div class="top-title">Day 1 · 啟程：飛往冰島</div>
+            <div class="top-sub">8月1日（週六）</div>
         </div>
     </div>
 
@@ -28,8 +28,8 @@
     <div class="banner" style="background:linear-gradient(135deg, #2563eb, #2563ebdd)">
         <div class="banner-num">01</div>
         <div class="banner-info">
-            <div class="theme">抵達雷克雅維克 ✈️</div>
-            <div class="meta">8月1日（週五）・✈️ 抵達</div>
+            <div class="theme">啟程：飛往冰島 ✈️</div>
+            <div class="meta">8月1日（週六）・✈️ 出發</div>
         </div>
     </div>
 
@@ -47,12 +47,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">✈️ 14:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E5%87%B1%E5%A4%AB%E6%8B%89%E7%B6%AD%E5%85%8B%E5%9C%8B%E9%9A%9B%E6%A9%9F%E5%A0%B4%20(KEF)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛫 18:10</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%90%AD%E4%B9%98%20CI923%20%E9%A3%9B%E5%BE%80%E9%A6%99%E6%B8%AF%20(HKG)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">抵達凱夫拉維克國際機場 (KEF)</div>
-                <div class="tl-desc">從台灣經轉機抵達冰島凱夫拉維克機場。通過海關後前往租車櫃台取車。</div>
-                <div class="tl-tags"><span class="tl-tag">✈️ 抵達</span><span class="tl-tag">🚗 取車</span></div>
+                <div class="tl-title">搭乘 CI923 飛往香港 (HKG)</div>
+                <div class="tl-desc">從台北 (TPE) 出發，展開冰島之旅！</div>
+                <div class="tl-tags"><span class="tl-tag">✈️ 出發</span><span class="tl-tag">🇹🇼 台北</span></div>
             </div>
         </div>
 
@@ -63,44 +63,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 15:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%8F%96%E8%BB%8A%E8%88%87%E6%BA%96%E5%82%99%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛬 20:05</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E9%A6%99%E6%B8%AF%E8%BD%89%E6%A9%9F%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">取車與準備</div>
-                <div class="tl-desc">取得租用的 4WD 車輛，檢查車況、保險文件。在機場旁超市 Nettó 購買首日補給品。</div>
-                <div class="tl-tags"><span class="tl-tag">🛒 採買</span><span class="tl-tag">⛽ 加油</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚗 16:30 – 17:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%E5%B8%82%E5%8D%80%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">前往雷克雅維克市區</div>
-                <div class="tl-desc">從 KEF 機場沿 41 號公路前往首都雷克雅維克，車程約 45 分鐘。沿途可見冰島特有的苔蘚熔岩地貌。</div>
-                <div class="tl-tags"><span class="tl-tag">🛤️ 公路</span><span class="tl-tag">🌋 熔岩地</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🏨 17:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%85%A5%E4%BD%8F%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%E4%BD%8F%E5%AE%BF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">入住雷克雅維克住宿</div>
-                <div class="tl-desc">抵達市區住宿 Check-in，整理行李。初步熟悉周邊環境。</div>
-                <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span></div>
+                <div class="tl-title">抵達香港轉機</div>
+                <div class="tl-desc">抵達香港。</div>
+                <div class="tl-tags"><span class="tl-tag">🇭🇰 香港</span></div>
             </div>
         </div>
 
@@ -111,12 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 18:30 – 21:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%B8%82%E5%8D%80%E6%BC%AB%E6%AD%A5%E8%88%87%E6%99%9A%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛫 23:25</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%90%AD%E4%B9%98%20LH797%20%E9%A3%9B%E5%BE%80%E6%B3%95%E8%98%AD%E5%85%8B%E7%A6%8F%20(FRA)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">市區漫步與晚餐</div>
-                <div class="tl-desc">漫步 Laugavegur 主街，感受首都氛圍。推薦品嘗冰島熱狗 Bæjarins Beztu Pylsur（柯林頓也吃過！），或在 Grillið 享用道地冰島料理。</div>
-                <div class="tl-tags"><span class="tl-tag">🌆 市區</span><span class="tl-tag">🌭 冰島熱狗</span><span class="tl-tag">🍽️ 晚餐</span></div>
+                <div class="tl-title">搭乘 LH797 飛往法蘭克福 (FRA)</div>
+                <div class="tl-desc">搭乘漢莎航空前往歐洲樞紐法蘭克福，在機上好好休息。</div>
+                <div class="tl-tags"><span class="tl-tag">✈️ 長途飛行</span></div>
             </div>
         </div>
     </div>
@@ -129,8 +97,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">雷克雅維克市區住宿</div>
-            <div class="desc">📍 Laugavegur 主街附近<br>🛏️ 第 1 晚（共住 2 晚）<br>💡 步行可達所有市區景點</div>
+            <div class="name">機上休息</div>
+            <div class="desc">✈️ 飛往歐洲<br>🛏️ 第 1 晚</div>
         </div>
     </div>
 
@@ -148,22 +116,20 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>抵達後先在機場換少量 ISK 現金（多數地方可刷卡）。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>請確認護照效期大於 6 個月，且已攜帶行程單。</span></div>
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>冰島自來水可直接飲用，不需要買礦泉水。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>GPS 導航建議使用 Google Maps 離線地圖或 maps.me。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>機上冷氣可能較強，建議隨身攜帶薄外套。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day2.html">Day 2 · 黃金圈 →</a></div>
+    <div class="next-day"><a href="day2.html">Day 2 · 抵達冰島 →</a></div>
 
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([64.1466, -21.9426], 11);
+            var map = L.map('map').setView([25.07, 121.23], 4);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"KEF 機場","lat":63.985,"lng":-22.606,"c":"#ef4444"},{"name":"Laugavegur 主街","lat":64.147,"lng":-21.933,"c":"#2563eb"},{"name":"Bæjarins Beztu","lat":64.148,"lng":-21.937,"c":"#f59e0b"}];
+            var spots = [{"name":"TPE 機場","lat":25.079,"lng":121.234,"c":"#ef4444"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
