--- a/day13.html
+++ b/day13.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 13 · 斯奈山半島西段｜冰島自駕 2026</title>
+    <title>Day 13 · 藍湖溫泉與休閒｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,23 +19,23 @@
     <div class="top">
         <a class="back" href="day12.html">←</a>
         <div>
-            <div class="top-title">Day 13 · 斯奈山半島西段</div>
-            <div class="top-sub">8月13日（週三）</div>
+            <div class="top-title">Day 13 · 藍湖溫泉與休閒</div>
+            <div class="top-sub">8月13日（週四）</div>
         </div>
     </div>
 
     <!-- 日橫幅 -->
-    <div class="banner" style="background:linear-gradient(135deg, #a855f7, #a855f7dd)">
+    <div class="banner" style="background:linear-gradient(135deg, #0ea5e9, #0ea5e9dd)">
         <div class="banner-num">13</div>
         <div class="banner-info">
-            <div class="theme">斯奈山半島西段 🏔️</div>
-            <div class="meta">8月13日（週三）・🚗 自駕</div>
+            <div class="theme">藍湖溫泉與休閒 💎</div>
+            <div class="meta">8月13日（週四）・🛍️ 購物</div>
         </div>
     </div>
 
     <!-- 行程時間軸 -->
     <div class="sec-head">
-        <div class="dot" style="background:#a855f7"></div>
+        <div class="dot" style="background:#0ea5e9"></div>
         <h2><i data-lucide="map-pin"></i> 今日行程</h2>
     </div>
     <div class="timeline">
@@ -47,11 +47,27 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 09:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E6%96%AF%E5%A5%88%E5%B1%B1%E8%A5%BF%E6%AE%B5%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🛍️ 10:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%B8%82%E5%8D%80%E6%9C%80%E5%BE%8C%E6%8E%A1%E8%B2%B7%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">前往斯奈山西段</div>
-                <div class="tl-desc">沿 54 號公路前往半島西端。</div>
+                <div class="tl-title">市區最後採買</div>
+                <div class="tl-desc">補齊紀念品。可購買 Omnom 巧克力或傳統的羊毛衣 (Lopapeysa)。</div>
+                <div class="tl-tags"><span class="tl-tag">🛍️ 購物</span><span class="tl-tag">🍫 巧克力</span></div>
+            </div>
+        </div>
+
+        <div class="tl-item">
+            <div class="tl-line">
+                <div class="tl-dot"></div>
+                <div class="tl-bar"></div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-time-row">
+                    <div class="tl-time">🚗 13:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%89%8D%E5%BE%80%E8%97%8D%E6%B9%96%20Blue%20Lagoon%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                </div>
+                <div class="tl-title">前往藍湖 Blue Lagoon</div>
+                <div class="tl-desc">驅車前往這座世界知名的地熱溫泉。</div>
                 <div class="tl-tags"><span class="tl-tag">🚗 自駕</span></div>
             </div>
         </div>
@@ -63,60 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 10:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Dj%C3%BApal%C3%B3nssandur%20%E9%BB%91%E7%8F%8D%E7%8F%A0%E6%B2%99%E7%81%98%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">♨️ 14:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%97%8D%E6%B9%96%E6%B3%A1%E6%B9%AF%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">Djúpalónssandur 黑珍珠沙灘</div>
-                <div class="tl-desc">獨特的黑卵石沙灘，有四塊「力量石」供測試力氣（古代漁夫的面試工具）。背景是斯奈菲爾冰川。</div>
-                <div class="tl-tags"><span class="tl-tag">🏖️ 黑珍珠沙灘</span><span class="tl-tag">💪 力量石</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚶 11:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=L%C3%B3ndrangar%20%E7%8E%84%E6%AD%A6%E5%B2%A9%E9%9B%99%E5%A1%94%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">Lóndrangar 玄武岩雙塔</div>
-                <div class="tl-desc">兩座聳立的火山岩柱，高 75 與 61 公尺。步道輕鬆，風景壯麗。</div>
-                <div class="tl-tags"><span class="tl-tag">🗿 岩柱</span><span class="tl-tag">📸 風景</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚶 13:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Arnarstapi%20%E5%B0%8F%E9%8E%AE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">Arnarstapi 小鎮</div>
-                <div class="tl-desc">海岸步道連接 Arnarstapi 與 Hellnar，沿途可見海蝕門、懸崖鳥巢。午餐在 Hellnar 咖啡廳。</div>
-                <div class="tl-tags"><span class="tl-tag">🥾 海岸步道</span><span class="tl-tag">🍽️ 午餐</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚶 15:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Vatnshellir%20%E7%81%AB%E5%B1%B1%E7%86%94%E5%B2%A9%E6%B4%9E%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">Vatnshellir 火山熔岩洞</div>
-                <div class="tl-desc">8000 年前形成的地下熔岩洞穴。導覽約 45 分鐘，需預約。地下世界超酷！</div>
-                <div class="tl-tags"><span class="tl-tag">🕳️ 熔岩洞</span><span class="tl-tag">🔦 探險</span></div>
+                <div class="tl-title">藍湖泡湯</div>
+                <div class="tl-desc">在夢幻的乳藍色泉水中放鬆，記得領取面罩泥與飲料。</div>
+                <div class="tl-tags"><span class="tl-tag">💎 藍湖</span><span class="tl-tag">💆 敷泥膜</span></div>
             </div>
         </div>
 
@@ -127,12 +95,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 17:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%BF%94%E5%9B%9E%E9%9B%B7%E5%85%8B%E9%9B%85%E7%B6%AD%E5%85%8B%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🍽️ 18:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E8%97%8D%E6%B9%96%20Lava%20%E9%A4%90%E5%BB%B3%20(%E6%88%96%E8%BF%94%E5%9B%9E%E5%B8%82%E5%8D%80)%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">返回雷克雅維克</div>
-                <div class="tl-desc">結束斯奈山之旅，沿一號公路返回雷克雅維克，車程約 2.5 小時。</div>
-                <div class="tl-tags"><span class="tl-tag">🚗 返程</span></div>
+                <div class="tl-title">藍湖 Lava 餐廳 (或返回市區)</div>
+                <div class="tl-desc">就在藍湖旁邊享受大餐，或返回市區度過在冰島的最後一晚。</div>
+                <div class="tl-tags"><span class="tl-tag">🍽️ 慶功宴</span></div>
             </div>
         </div>
     </div>
@@ -145,8 +113,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">雷克雅維克市區住宿</div>
-            <div class="desc">📍 Laugavegur 主街附近<br>🛏️ 第 13 晚（共住 3 晚）<br>💡 最後三晚回到首都</div>
+            <div class="name">雷克雅維克住宿</div>
+            <div class="desc">📍 同上<br>🛏️ 第 13 晚</div>
         </div>
     </div>
 
@@ -164,22 +132,20 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Djúpalónssandur 的力量石：最重 154 kg，能舉起一半的才能上船。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>藍湖門票經常售罄，必須提早於官網預約時段。</span></div>
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Vatnshellir 洞穴需預約，內部約 5°C。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>從斯奈山回雷克雅維克走 54 號接 1 號公路。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>泡藍湖前務必要將護髮乳塗滿頭髮以防頭髮非常乾澀。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day14.html">Day 14 · 雷克雅維克市區 →</a></div>
+    <div class="next-day"><a href="day14.html">Day 14 · 首都慢活 →</a></div>
 
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([64.75, -23.9], 9);
+            var map = L.map('map').setView([63.88, -22.45], 10);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Djúpalónssandur","lat":64.755,"lng":-23.99,"c":"#a855f7"},{"name":"Lóndrangar","lat":64.734,"lng":-23.806,"c":"#1e293b"},{"name":"Arnarstapi","lat":64.772,"lng":-23.625,"c":"#10b981"}];
+            var spots = [{"name":"Blue Lagoon","lat":63.88,"lng":-22.45,"c":"#0ea5e9"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
