--- a/day3.html
+++ b/day3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Day 3 · 南海岸瀑布之旅｜冰島自駕 2026</title>
+    <title>Day 3 · 黃金圈經典路線｜冰島自駕 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
@@ -19,8 +19,8 @@
     <div class="top">
         <a class="back" href="day2.html">←</a>
         <div>
-            <div class="top-title">Day 3 · 南海岸瀑布之旅</div>
-            <div class="top-sub">8月3日（週日）</div>
+            <div class="top-title">Day 3 · 黃金圈經典路線</div>
+            <div class="top-sub">8月3日（週一）</div>
         </div>
     </div>
 
@@ -28,8 +28,8 @@
     <div class="banner" style="background:linear-gradient(135deg, #10b981, #10b981dd)">
         <div class="banner-num">03</div>
         <div class="banner-info">
-            <div class="theme">南海岸瀑布之旅 🌊</div>
-            <div class="meta">8月3日（週日）・🛤️ 一號公路</div>
+            <div class="theme">黃金圈經典路線 ⛲</div>
+            <div class="meta">8月3日（週一）・🏛️ 世界遺產</div>
         </div>
     </div>
 
@@ -47,12 +47,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚗 08:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%BA%E7%99%BC%E5%89%8D%E5%BE%80%E5%8D%97%E6%B5%B7%E5%B2%B8%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚗 09:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%87%BA%E7%99%BC%E5%89%8D%E5%BE%80%E8%BE%9B%E6%A0%BC%E7%B6%AD%E5%88%A9%E7%88%BE%E5%9C%8B%E5%AE%B6%E5%85%AC%E5%9C%92%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">出發前往南海岸</div>
-                <div class="tl-desc">離開雷克雅維克，沿一號公路向南前進。今天將一路向東，沿途有冰島最美的瀑布群。</div>
-                <div class="tl-tags"><span class="tl-tag">🛤️ 一號公路</span></div>
+                <div class="tl-title">出發前往辛格維利爾國家公園</div>
+                <div class="tl-desc">約 45 分鐘車程抵達世界遺產辛格維利爾，板塊交界處。</div>
+                <div class="tl-tags"><span class="tl-tag">🏛️ 世界遺產</span><span class="tl-tag">🌍 板塊裂縫</span></div>
             </div>
         </div>
 
@@ -63,12 +63,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 10:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%A1%9E%E9%87%8C%E9%9B%85%E8%98%AD%E7%80%91%E5%B8%83%20Seljalandsfoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚶 10:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8E%A2%E7%B4%A2%E8%BE%9B%E6%A0%BC%E7%B6%AD%E5%88%A9%E7%88%BE%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">塞里雅蘭瀑布 Seljalandsfoss</div>
-                <div class="tl-desc">60 公尺高的瀑布，最特別的是可以繞到瀑布後方！穿防水衣是必須的。旁邊還有隱藏瀑布 Gljúfrabúi。</div>
-                <div class="tl-tags"><span class="tl-tag">🌊 水簾洞</span><span class="tl-tag">📸 隱藏瀑布</span></div>
+                <div class="tl-title">探索辛格維利爾</div>
+                <div class="tl-desc">沿步道穿越 Almannagjá 裂縫，觀賞 Öxarárfoss 瀑布。</div>
+                <div class="tl-tags"><span class="tl-tag">🥾 健行</span></div>
             </div>
         </div>
 
@@ -79,12 +79,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🚶 12:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%96%AF%E7%A7%91%E5%8A%A0%E7%80%91%E5%B8%83%20Sk%C3%B3gafoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚗 13:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Geysir%20%E9%96%93%E6%AD%87%E6%B3%89%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">斯科加瀑布 Skógafoss</div>
-                <div class="tl-desc">寬 25 公尺、落差 60 公尺的壯觀瀑布。可爬 527 階樓梯到頂端俯瞰。瀑布前經常出現彩虹。</div>
-                <div class="tl-tags"><span class="tl-tag">🌈 彩虹瀑布</span><span class="tl-tag">🥾 527階</span></div>
+                <div class="tl-title">Geysir 間歇泉</div>
+                <div class="tl-desc">觀賞 Strokkur 間歇泉每 5-8 分鐘噴發一次。</div>
+                <div class="tl-tags"><span class="tl-tag">⛲ 間歇泉</span><span class="tl-tag">📸 打卡</span></div>
             </div>
         </div>
 
@@ -95,28 +95,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🍽️ 14:00</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E5%8D%88%E9%A4%90%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚗 15:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=%E9%BB%83%E9%87%91%E7%80%91%E5%B8%83%20Gullfoss%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">午餐</div>
-                <div class="tl-desc">在 Skógafoss 旁的餐廳或 Skógar 民俗博物館咖啡廳用餐。</div>
-                <div class="tl-tags"><span class="tl-tag">🍽️ 午餐</span></div>
-            </div>
-        </div>
-
-        <div class="tl-item">
-            <div class="tl-line">
-                <div class="tl-dot"></div>
-                <div class="tl-bar"></div>
-            </div>
-            <div class="tl-card">
-                <div class="tl-time-row">
-                    <div class="tl-time">🚗 15:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=Dyrh%C3%B3laey%20%E6%B5%B7%E5%B2%AC%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
-                </div>
-                <div class="tl-title">Dyrhólaey 海岬</div>
-                <div class="tl-desc">壯觀的岩石拱門與懸崖。8 月份是觀賞 Puffin 海鸚的好時機！從頂端可遠眺黑沙灘全景。</div>
-                <div class="tl-tags"><span class="tl-tag">🐧 Puffin</span><span class="tl-tag">🏖️ 黑沙灘</span></div>
+                <div class="tl-title">黃金瀑布 Gullfoss</div>
+                <div class="tl-desc">冰島最著名的雙層階梯式瀑布，非常壯觀。</div>
+                <div class="tl-tags"><span class="tl-tag">🌊 瀑布</span><span class="tl-tag">🌈 彩虹</span></div>
             </div>
         </div>
 
@@ -127,12 +111,12 @@
             </div>
             <div class="tl-card">
                 <div class="tl-time-row">
-                    <div class="tl-time">🏨 17:30</div>
-                    <a href="https://www.google.com/maps/search/?api=1&query=%E6%8A%B5%E9%81%94%E7%B6%AD%E5%85%8B%20V%C3%ADk%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
+                    <div class="tl-time">🚗 17:00</div>
+                    <a href="https://www.google.com/maps/search/?api=1&query=Keri%C3%B0%20%E7%81%AB%E5%B1%B1%E5%8F%A3%E6%B9%96%20Iceland" target="_blank" class="nav-btn"><i data-lucide="navigation"></i> 導航</a>
                 </div>
-                <div class="tl-title">抵達維克 Vík</div>
-                <div class="tl-desc">入住維克小鎮住宿，冰島最南端的村莊。</div>
-                <div class="tl-tags"><span class="tl-tag">🏨 Check-in</span></div>
+                <div class="tl-title">Kerið 火山口湖</div>
+                <div class="tl-desc">回程或前往南岸途中繞道參觀彩色火山口湖。</div>
+                <div class="tl-tags"><span class="tl-tag">🌋 火山口湖</span></div>
             </div>
         </div>
     </div>
@@ -145,8 +129,8 @@
     <div class="hotel-card">
         <div class="icon">🏨</div>
         <div>
-            <div class="name">維克小鎮住宿</div>
-            <div class="desc">📍 Vík í Mýrdal<br>🛏️ 第 3 晚<br>💡 冰島最南端的小鎮，可觀夕陽</div>
+            <div class="name">南岸城鎮住宿 (Selfoss 或 Hella)</div>
+            <div class="desc">📍 南岸城首選<br>🛏️ 第 3 晚</div>
         </div>
     </div>
 
@@ -164,22 +148,18 @@
     </div>
     <div class="tips">
 
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Seljalandsfoss 後方步道濕滑，穿防水鞋。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>Dyrhólaey 8 月可看 Puffin，但不要太靠近巢穴。</span></div>
-
-        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>南海岸風大，注意車門不要被吹壞（冰島租車保險通常不含車門損壞）。</span></div>
+        <div class="tip"><span class="tip-ic"><i data-lucide="alert-circle"></i></span><span>黃金圈遊客多，Gullfoss 瀑布霧氣大，記得穿防水外套。</span></div>
     </div>
 
     <!-- 導航按鈕 -->
-    <div class="next-day"><a href="day4.html">Day 4 · 黑沙灘 →</a></div>
+    <div class="next-day"><a href="day4.html">Day 4 · 南海岸與黑沙灘 →</a></div>
 
     <script>
         // 地圖
         try {
-            var map = L.map('map').setView([63.55, -19.6], 9);
+            var map = L.map('map').setView([64.3, -20.3], 9);
             L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { attribution:'© OSM', maxZoom:18 }).addTo(map);
-            var spots = [{"name":"Seljalandsfoss","lat":63.616,"lng":-19.993,"c":"#10b981"},{"name":"Gljúfrabúi","lat":63.621,"lng":-19.987,"c":"#14b8a6"},{"name":"Skógafoss","lat":63.532,"lng":-19.511,"c":"#2563eb"},{"name":"Dyrhólaey","lat":63.401,"lng":-19.128,"c":"#f97316"}];
+            var spots = [{"name":"辛格維利爾","lat":64.256,"lng":-21.131,"c":"#10b981"},{"name":"Geysir","lat":64.31,"lng":-20.302,"c":"#f59e0b"},{"name":"Gullfoss","lat":64.327,"lng":-20.12,"c":"#2563eb"}];
             spots.forEach(function(s) {
                 L.circleMarker([s.lat, s.lng], { radius:7, fillColor:s.c, color:'#fff', weight:2, fillOpacity:.9 })
                     .addTo(map).bindPopup('<b>' + s.name + '</b>');
